@@ -42,7 +42,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipException;
 import java.util.zip.ZipFile;
@@ -99,10 +98,10 @@ public class PointIO {
 		ImagePlane defaultPlane = ImagePlane.getDefaultPlane();
 		for (var entry: pointsMap.entrySet()) {
 			var temp = Arrays.asList(cols);
-			String pathClass = temp.indexOf("class") > -1 ? entry.getKey()[temp.indexOf("class")-2] : "";
-			String name = temp.indexOf("name") > -1 ? entry.getKey()[temp.indexOf("name")-2] : "";
+			String pathClass = temp.contains("class") ? entry.getKey()[temp.indexOf("class")-2] : "";
+			String name = temp.contains("name") ? entry.getKey()[temp.indexOf("name")-2] : "";
 			Integer color = null;
-			if (temp.indexOf("color") > -1) {
+			if (temp.contains("color")) {
 				var colorTemp = entry.getKey()[temp.indexOf("color")-2];
 				if (colorTemp != null && !colorTemp.isEmpty())
 					color = Integer.parseInt(colorTemp);
@@ -155,7 +154,7 @@ public class PointIO {
 		int unfilteredSize = pathObjects.size();
 		pathObjects = pathObjects.stream()
 								.filter(p -> p.getROI() instanceof PointsROI)
-								.collect(Collectors.toList());
+								.toList();
 		int filteredSize = pathObjects.size();
 		if (unfilteredSize != filteredSize)
 			logger.warn(unfilteredSize-filteredSize + " of the " + filteredSize 
