@@ -4,7 +4,7 @@
  * %%
  * Copyright (C) 2014 - 2016 The Queen's University of Belfast, Northern Ireland
  * Contact: IP Management (ipmanagement@qub.ac.uk)
- * Copyright (C) 2018 - 2020 QuPath developers, The University of Edinburgh
+ * Copyright (C) 2018 - 2023 QuPath developers, The University of Edinburgh
  * %%
  * QuPath is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
@@ -23,23 +23,8 @@
 
 package qupath.lib.gui.commands;
 
-import java.awt.image.BufferedImage;
-import java.beans.PropertyChangeEvent;
-import java.beans.PropertyChangeListener;
-import java.text.DecimalFormat;
-import java.util.ArrayList;
-import java.util.HashSet;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import javafx.application.Platform;
+import javafx.beans.Observable;
 import javafx.beans.binding.Bindings;
 import javafx.beans.binding.ObjectBinding;
 import javafx.beans.property.BooleanProperty;
@@ -47,10 +32,12 @@ import javafx.beans.property.SimpleBooleanProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.property.SimpleStringProperty;
 import javafx.beans.property.StringProperty;
-import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
 import javafx.collections.FXCollections;
+import javafx.collections.ListChangeListener;
+import javafx.collections.ObservableList;
 import javafx.collections.transformation.FilteredList;
+import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
@@ -60,6 +47,7 @@ import javafx.scene.control.Button;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.CheckBox;
 import javafx.scene.control.ColorPicker;
+import javafx.scene.control.ContentDisplay;
 import javafx.scene.control.ContextMenu;
 import javafx.scene.control.Dialog;
 import javafx.scene.control.Label;
@@ -68,11 +56,11 @@ import javafx.scene.control.SelectionMode;
 import javafx.scene.control.Slider;
 import javafx.scene.control.TableCell;
 import javafx.scene.control.TableColumn;
-import javafx.scene.control.TableColumn.CellDataFeatures;
 import javafx.scene.control.TableRow;
 import javafx.scene.control.TableView;
 import javafx.scene.control.TextArea;
 import javafx.scene.control.TextField;
+import javafx.scene.control.ToggleButton;
 import javafx.scene.control.Tooltip;
 import javafx.scene.control.cell.CheckBoxTableCell;
 import javafx.scene.input.Clipboard;
@@ -85,14 +73,17 @@ import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.FlowPane;
 import javafx.scene.layout.GridPane;
+import javafx.scene.layout.Pane;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.VBox;
 import javafx.scene.paint.Color;
-import javafx.scene.shape.Rectangle;
 import javafx.scene.text.Text;
 import javafx.scene.text.TextAlignment;
 import javafx.stage.Stage;
-import javafx.util.Callback;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import qupath.fx.dialogs.Dialogs;
+import qupath.fx.utils.GridPaneUtils;
 import qupath.lib.analysis.stats.Histogram;
 import qupath.lib.common.GeneralTools;
 import qupath.lib.display.ChannelDisplayInfo;
@@ -102,15 +93,31 @@ import qupath.lib.gui.QuPathGUI;
 import qupath.lib.gui.charts.HistogramPanelFX;
 import qupath.lib.gui.charts.HistogramPanelFX.HistogramData;
 import qupath.lib.gui.charts.HistogramPanelFX.ThresholdedChartWrapper;
-import qupath.lib.gui.dialogs.Dialogs;
 import qupath.lib.gui.prefs.PathPrefs;
 import qupath.lib.gui.tools.ColorToolsFX;
-import qupath.lib.gui.tools.PaneTools;
 import qupath.lib.gui.viewer.QuPathViewer;
 import qupath.lib.images.ImageData;
 import qupath.lib.images.servers.ImageChannel;
 import qupath.lib.images.servers.ImageServer;
 import qupath.lib.images.servers.ImageServerMetadata;
+
+import java.awt.image.BufferedImage;
+import java.beans.PropertyChangeEvent;
+import java.beans.PropertyChangeListener;
+import java.text.DecimalFormat;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.function.Predicate;
+import java.util.regex.Pattern;
+import java.util.regex.PatternSyntaxException;
 
 /**
  * Command to show a Brightness/Contrast dialog to adjust the image display.
@@ -118,36 +125,44 @@ import qupath.lib.images.servers.ImageServerMetadata;
  * @author Pete Bankhead
  *
  */
-public class BrightnessContrastCommand implements Runnable, ChangeListener<ImageData<BufferedImage>>, PropertyChangeListener {
+public class BrightnessContrastCommand implements Runnable {
 	
 	private static Logger logger = LoggerFactory.getLogger(BrightnessContrastCommand.class);
 	
 	private static DecimalFormat df = new DecimalFormat("#.###");
-		
+
+	/**
+	 * Style used for labels that display warning text.
+	 */
+	private static String WARNING_STYLE = "-fx-text-fill: -qp-script-error-color;";
+
+	private static double BUTTON_SPACING = 5;
+
 	private QuPathGUI qupath;
 	private QuPathViewer viewer;
 	private ImageDisplay imageDisplay;
-	
+
+	private ImageDataPropertyChangeListener imageDataPropertyChangeListener = new ImageDataPropertyChangeListener();
+
+	private SelectedChannelsChangeListener selectedChannelsChangeListener = new SelectedChannelsChangeListener();
+
 	private Slider sliderMin;
 	private Slider sliderMax;
 	private Slider sliderGamma;
 	private Stage dialog;
 	
 	private boolean slidersUpdating = false;
-//	// The current slider min & max, in floating point precision
-//	// Sliders themselves use integers - so there is likely to be a need to convert in many cases
-//	private float minCurrent = 0;
-//	private float maxCurrent = 0;
-	
+
 	private TableView<ChannelDisplayInfo> table = new TableView<>();
 	private StringProperty filterText = new SimpleStringProperty("");
-	private ObjectBinding<Predicate<ChannelDisplayInfo>> predicate = Bindings.createObjectBinding(() -> {
-		String text = filterText.get().toLowerCase().strip();
-		if (text.isBlank())
-			return info -> true;
-		return info -> info.getName().toLowerCase().contains(text);
-	}, filterText);
-	
+	private BooleanProperty useRegex = PathPrefs.createPersistentPreference("brightnessContrastFilterRegex", false);
+	private ObjectBinding<Predicate<ChannelDisplayInfo>> predicate = createChannelDisplayPredicateBinding(filterText);
+
+	/**
+	 * Checkbox used to quickly turn on or off all channels
+	 */
+	private CheckBox cbShowAll = new CheckBox();
+
 	private ColorPicker picker = new ColorPicker();
 	
 	private HistogramPanelFX histogramPanel = new HistogramPanelFX();
@@ -158,7 +173,7 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 	private BooleanProperty showGrayscale = new SimpleBooleanProperty(false);
 	private BooleanProperty invertBackground = new SimpleBooleanProperty(false);
 	
-	private BrightnessContrastKeyListener keyListener = new BrightnessContrastKeyListener();
+	private BrightnessContrastKeyTypedListener keyListener = new BrightnessContrastKeyTypedListener();
 	
 	/**
 	 * Constructor.
@@ -166,10 +181,20 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 	 */
 	public BrightnessContrastCommand(final QuPathGUI qupath) {
 		this.qupath = qupath;
-		this.qupath.imageDataProperty().addListener(this);
-		
-		// Add 'pure' red, green & blue to the available colors
-		picker.getCustomColors().addAll(
+		this.qupath.imageDataProperty().addListener(this::handleImageDataChange);
+	}
+
+	@Override
+	public void run() {
+		if (dialog == null)
+			dialog = createDialog();
+		dialog.show();
+		updateShowTableColumnHeader();
+	}
+
+	private void initializeColorPicker() {
+		// Add 'pure' red, green & blue to the available color picker colors
+		picker.getCustomColors().setAll(
 				ColorToolsFX.getCachedColor(255, 0, 0),
 				ColorToolsFX.getCachedColor(0, 255, 0),
 				ColorToolsFX.getCachedColor(0, 0, 255),
@@ -177,52 +202,104 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 				ColorToolsFX.getCachedColor(0, 255, 255),
 				ColorToolsFX.getCachedColor(255, 0, 255));
 	}
-	
-	
-	boolean isInitialized() {
-		return sliderMin != null && sliderMax != null;
-	}
-	
-	
-	private void initializeSliders() {
-		sliderMin = new Slider(0, 255, 0);
-		sliderMax = new Slider(0, 255, 255);
-		sliderMin.valueProperty().addListener((v, o, n) -> handleSliderChange());
-		sliderMax.valueProperty().addListener((v, o, n) -> handleSliderChange());
-		sliderGamma = new Slider(0.01, 5, 0.01);
-		sliderGamma.valueProperty().bindBidirectional(PathPrefs.viewerGammaProperty());
-	}
-	
+
+
 	private Stage createDialog() {
-		if (!isInitialized())
-			initializeSliders();
-		
+		if (isInitialized())
+			throw new RuntimeException("createDialog() called after initialization!");
+
+		initializeShowAllCheckbox();
+		initializeSliders();
+		initializeColorPicker();
 		initializePopup();
-		
-		changed(null, null, qupath.getImageData());
-		
-		BorderPane pane = new BorderPane();
-		
+
+		handleImageDataChange(null, null, qupath.getImageData());
+
+		Stage dialog = new Stage();
+		dialog.initOwner(qupath.getStage());
+		dialog.setTitle("Brightness & contrast");
+
+		GridPane pane = new GridPane();
+		int row = 0;
+
+		// Create color/channel display table
+		table = createChannelDisplayTable();
+		pane.add(table, 0, row++);
+		GridPane.setFillHeight(table, Boolean.TRUE);
+		GridPane.setVgrow(table, Priority.ALWAYS);
+
+		Pane paneTextFilter = createTextFilterPane();
+		pane.add(paneTextFilter, 0, row++);
+
+		Pane paneCheck = createCheckboxPane();
+		pane.add(paneCheck, 0, row++);
+
+		histogramPanel.setShowTickLabels(false);
+		histogramPanel.getChart().setAnimated(false);
+		var chartPane = chartWrapper.getPane();
+		chartPane.setPrefWidth(200);
+		chartPane.setPrefHeight(150);
+		pane.add(chartPane, 0, row++);
+//		pane.add(histogramPanel.getChart(), 0, row++);
+
+		Pane paneSliders = createSliderPane();
+		paneSliders.prefWidthProperty().bind(pane.widthProperty());
+		pane.add(paneSliders, 0, row++);
+
+		Pane paneButtons = createAutoResetButtonPane();
+		pane.add(paneButtons, 0, row++);
+
+		Pane paneWarnings = createWarningPane();
+		pane.add(paneWarnings, 0, row++);
+
+		Pane paneKeepSettings = createKeepSettingsPane();
+		pane.add(paneKeepSettings, 0, row++);
+
+		pane.setPadding(new Insets(10, 10, 10, 10));
+		pane.setVgap(5);
+
+		Scene scene = new Scene(pane, 350, 580);
+		scene.addEventHandler(KeyEvent.KEY_TYPED, keyListener);
+		dialog.setScene(scene);
+		dialog.setMinWidth(300);
+		dialog.setMinHeight(400);
+		dialog.setMaxWidth(600);
+
+		updateTable();
+
+		if (!table.getItems().isEmpty())
+			table.getSelectionModel().select(0);
+
+		setShowChannel(getCurrentInfo());
+		updateHistogram();
+		updateSliders();
+
+		// Update sliders when receiving focus - in case the display has been updated elsewhere
+		dialog.focusedProperty().addListener(this::handleDialogFocusChanged);
+
+		paneWarnings.heightProperty().addListener((v, o, n) -> {
+			dialog.setHeight(dialog.getHeight() + n.doubleValue() - o.doubleValue());
+		});
+
+		return dialog;
+	}
+
+
+	private Pane createSliderPane() {
 		GridPane box = new GridPane();
 		String blank = "      ";
 		Label labelMin = new Label("Min display");
 		Tooltip tooltipMin = new Tooltip("Set minimum lookup table value - double-click the value to edit manually");
-//		labelMin.setTooltip(new Tooltip("Set minimum lookup table value - double-click to edit manually"));
 		Label labelMinValue = new Label(blank);
 		labelMinValue.setTooltip(tooltipMin);
 		labelMin.setTooltip(tooltipMin);
 		sliderMin.setTooltip(tooltipMin);
 		labelMin.setLabelFor(sliderMin);
-		labelMinValue.textProperty().bind(Bindings.createStringBinding(() -> {
-//			if (table.getSelectionModel().getSelectedItem() == null)
-//				return blank;
-			// If value < 10, return 2 dp, otherwise 1 dp. Should be more useful for 16-/32-bit images.
-			return sliderMin.getValue() < 10 ? String.format("%.2f", sliderMin.getValue()) : String.format("%.1f", sliderMin.getValue());
-		}, table.getSelectionModel().selectedItemProperty(), sliderMin.valueProperty()));
+		labelMinValue.textProperty().bind(createSliderTextBinding(sliderMin));
 		box.add(labelMin, 0, 0);
 		box.add(sliderMin, 1, 0);
 		box.add(labelMinValue, 2, 0);
-		
+
 		Label labelMax = new Label("Max display");
 		Tooltip tooltipMax = new Tooltip("Set maximum lookup table value - double-click the value to edit manually");
 		labelMax.setTooltip(tooltipMax);
@@ -230,451 +307,519 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 		labelMaxValue.setTooltip(tooltipMax);
 		sliderMax.setTooltip(tooltipMax);
 		labelMax.setLabelFor(sliderMax);
-		labelMaxValue.textProperty().bind(Bindings.createStringBinding(() -> {
-//				if (table.getSelectionModel().getSelectedItem() == null)
-//					return blank;
-			// If value < 10, return 2 dp, otherwise 1 dp. Should be more useful for 16-/32-bit images.
-			return sliderMax.getValue() < 10 ? String.format("%.2f", sliderMax.getValue()) : String.format("%.1f", sliderMax.getValue());
-			}, table.getSelectionModel().selectedItemProperty(), sliderMax.valueProperty()));
+		labelMaxValue.textProperty().bind(createSliderTextBinding(sliderMax));
 		box.add(labelMax, 0, 1);
 		box.add(sliderMax, 1, 1);
 		box.add(labelMaxValue, 2, 1);
 		box.setVgap(5);
-		
+
 		Label labelGamma = new Label("Gamma");
 		Label labelGammaValue = new Label(blank);
 		Tooltip tooltipGamma = new Tooltip("Set gamma value, for all viewers.\n"
 				+ "Double-click the value to edit manually, shift-click to reset to 1.\n"
 				+ "It is recommended to leave this value at 1, to avoid unnecessary nonlinear contrast adjustment.");
 		labelGammaValue.setTooltip(tooltipGamma);
-		labelGammaValue.textProperty().bind(Bindings.createStringBinding(() -> {
-			return GeneralTools.formatNumber(sliderGamma.getValue(), 2);
-			}, table.getSelectionModel().selectedItemProperty(), sliderGamma.valueProperty()));
+		labelGammaValue.textProperty().bind(createGammaLabelBinding(sliderGamma.valueProperty()));
 		sliderGamma.setTooltip(tooltipGamma);
 		labelGamma.setLabelFor(sliderGamma);
 		labelGamma.setTooltip(tooltipGamma);
-		labelGammaValue.setOnMouseClicked(e -> {
-			if (e.getClickCount() >= 3 || e.isShiftDown())
-				sliderGamma.setValue(1.0);
-			else {
-				var newGamma = Dialogs.showInputDialog("Gamma", "Set gamma value", sliderGamma.getValue());
-				if (newGamma != null)
-					sliderGamma.setValue(newGamma);
-			}
-		});
-		labelGammaValue.styleProperty().bind(Bindings.createStringBinding(() -> {
-			if (sliderGamma.getValue() == 1.0)
-				return null;
-			return "-fx-text-fill: red;";
-		}, sliderGamma.valueProperty()));
-		
+		labelGammaValue.setOnMouseClicked(this::handleGammaLabelClicked);
+		labelGammaValue.styleProperty().bind(createGammaLabelStyleBinding(sliderGamma.valueProperty()));
+
 		box.add(labelGamma, 0, 2);
 		box.add(sliderGamma, 1, 2);
 		box.add(labelGammaValue, 2, 2);
-			
-		
+
 		GridPane.setFillWidth(sliderMin, Boolean.TRUE);
 		GridPane.setFillWidth(sliderMax, Boolean.TRUE);
-		box.prefWidthProperty().bind(pane.widthProperty());
-		box.setPadding(new Insets(5, 0, 5, 0));
+//		box.setPadding(new Insets(5, 0, 5, 0));
 		GridPane.setHgrow(sliderMin, Priority.ALWAYS);
 		GridPane.setHgrow(sliderMax, Priority.ALWAYS);
-		
-		// In the absence of a better way, make it possible to enter display range values 
+
+		// In the absence of a better way, make it possible to enter display range values
 		// manually by double-clicking on the corresponding label
-		labelMinValue.setOnMouseClicked(e -> {
-			if (e.getClickCount() == 2) {
-				ChannelDisplayInfo infoVisible = getCurrentInfo();
-				if (infoVisible == null)
-					return;
+		labelMinValue.setOnMouseClicked(this::handleMinLabelClick);
+		labelMaxValue.setOnMouseClicked(this::handleMaxLabelClick);
+		return box;
+	}
 
-				Double value = Dialogs.showInputDialog("Display range", "Set display range minimum", (double)infoVisible.getMinDisplay());
-				if (value != null && !Double.isNaN(value)) {
-					sliderMin.setValue(value);
-					// Update display directly if out of slider range
-					if (value < sliderMin.getMin() || value > sliderMin.getMax()) {
-						imageDisplay.setMinMaxDisplay(infoVisible, (float)value.floatValue(), (float)infoVisible.getMaxDisplay());
-//						infoVisible.setMinDisplay(value.floatValue());
-//						viewer.updateThumbnail();
-						updateSliders();
-						viewer.repaintEntireImage();
-					}
-				}
-			}
-		});
-		labelMaxValue.setOnMouseClicked(e -> {
-			if (e.getClickCount() == 2) {
-				ChannelDisplayInfo infoVisible = getCurrentInfo();
-				if (infoVisible == null)
-					return;
 
-				Double value = Dialogs.showInputDialog("Display range", "Set display range maximum", (double)infoVisible.getMaxDisplay());
-				if (value != null && !Double.isNaN(value)) {
-					sliderMax.setValue(value);
-					// Update display directly if out of slider range
-					if (value < sliderMax.getMin() || value > sliderMax.getMax()) {
-						imageDisplay.setMinMaxDisplay(infoVisible, (float)infoVisible.getMinDisplay(), (float)value.floatValue());
-//						infoVisible.setMaxDisplay(value.floatValue());
-//						viewer.updateThumbnail();
-						updateSliders();
-						viewer.repaintEntireImage();
-					}
-				}
-			}
-		});
-		
-		
+	private Pane createKeepSettingsPane() {
+		CheckBox cbKeepDisplaySettings = new CheckBox("Keep settings");
+		cbKeepDisplaySettings.selectedProperty().bindBidirectional(PathPrefs.keepDisplaySettingsProperty());
+		cbKeepDisplaySettings.setTooltip(new Tooltip("Retain same display settings where possible when opening similar images"));
+		return new BorderPane(cbKeepDisplaySettings);
+	}
+
+
+	private Pane createAutoResetButtonPane() {
 		Button btnAuto = new Button("Auto");
-		btnAuto.setOnAction(e -> {
-			if (imageDisplay == null)
-				return;
-//				if (histogram == null)
-//					return;
-////				setSliders((float)histogram.getEdgeMin(), (float)histogram.getEdgeMax());
-				ChannelDisplayInfo info = getCurrentInfo();
-				double saturation = PathPrefs.autoBrightnessContrastSaturationPercentProperty().get()/100.0;
-				imageDisplay.autoSetDisplayRange(info, saturation);
-				for (ChannelDisplayInfo info2 : table.getSelectionModel().getSelectedItems()) {
-					imageDisplay.autoSetDisplayRange(info2, saturation);
-				}
-				updateSliders();
-				handleSliderChange();
-		});
-		
+		btnAuto.setOnAction(this::handleAutoButtonClicked);
+
 		Button btnReset = new Button("Reset");
-		btnReset.setOnAction(e -> {
-				for (ChannelDisplayInfo info : table.getSelectionModel().getSelectedItems()) {
-					imageDisplay.setMinMaxDisplay(info, info.getMinAllowed(), info.getMaxAllowed());
-				}
-				sliderMin.setValue(sliderMin.getMin());
-				sliderMax.setValue(sliderMax.getMax());
-				sliderGamma.setValue(1.0);
-		});
-		
-		Stage dialog = new Stage();
-		dialog.initOwner(qupath.getStage());
-		dialog.setTitle("Brightness & contrast");
-		
-		// Create color/channel display table
-		table = new TableView<>(imageDisplay == null ? FXCollections.observableArrayList() : imageDisplay.availableChannels());
+		btnReset.setOnAction(this::handleResetButtonClicked);
+
+		GridPane pane = GridPaneUtils.createColumnGridControls(
+				btnAuto,
+				btnReset
+		);
+		if (BUTTON_SPACING > 0)
+			pane.setHgap(BUTTON_SPACING);
+		return pane;
+	}
+
+
+	private Pane createWarningPane() {
+		var labelWarning = new Label("Inverted background - interpret colors cautiously!");
+		labelWarning.setTooltip(new Tooltip("Inverting the background uses processing trickery that reduces the visual information in the image.\n"
+				+ "Be careful about interpreting colors, especially for images with multiple channels"));
+		labelWarning.setStyle(WARNING_STYLE);
+		labelWarning.setAlignment(Pos.CENTER);
+		labelWarning.setTextAlignment(TextAlignment.CENTER);
+		labelWarning.visibleProperty().bind(invertBackground.and(showGrayscale.not()));
+		labelWarning.setMaxWidth(Double.MAX_VALUE);
+		labelWarning.managedProperty().bind(labelWarning.visibleProperty()); // Remove if not visible
+
+		var labelWarningGamma = new Label("Gamma is not equal to 1.0 - shift+click to reset");
+		labelWarningGamma.setOnMouseClicked(this::handleGammaWarningClicked);
+		labelWarningGamma.setTooltip(new Tooltip("Adjusting the gamma results in a nonlinear contrast adjustment -\n"
+				+ "in science, such changes should usually be disclosed in any figure legends"));
+		labelWarningGamma.setStyle(WARNING_STYLE);
+		labelWarningGamma.setAlignment(Pos.CENTER);
+		labelWarningGamma.setTextAlignment(TextAlignment.CENTER);
+		labelWarningGamma.visibleProperty().bind(sliderGamma.valueProperty().isNotEqualTo(1.0, 0.0));
+		labelWarningGamma.setMaxWidth(Double.MAX_VALUE);
+		labelWarningGamma.managedProperty().bind(labelWarningGamma.visibleProperty()); // Remove if not visible
+
+		var vboxWarnings = new VBox();
+		vboxWarnings.getChildren().setAll(labelWarning, labelWarningGamma);
+		return vboxWarnings;
+	}
+
+
+	private TableView<ChannelDisplayInfo> createChannelDisplayTable() {
+		TableView<ChannelDisplayInfo> table = new TableView<>(imageDisplay == null ? FXCollections.observableArrayList() : imageDisplay.availableChannels());
 		var textPlaceholder = new Text("No channels available");
 		textPlaceholder.setStyle("-fx-fill: -fx-text-base-color;");
 		table.setPlaceholder(textPlaceholder);
-		table.addEventHandler(KeyEvent.KEY_PRESSED, new CopyTableListener());
-		
-		table.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
-		table.getSelectionModel().selectedItemProperty().addListener((v, o, n) -> {
-	        updateHistogram();
-			updateSliders();
-		});
+		table.addEventHandler(KeyEvent.KEY_PRESSED, new ChannelTableKeypressedListener());
 
-		TableColumn<ChannelDisplayInfo, ChannelDisplayInfo> col1 = new TableColumn<>("Color");
-		col1.setCellValueFactory(new Callback<CellDataFeatures<ChannelDisplayInfo, ChannelDisplayInfo>, ObservableValue<ChannelDisplayInfo>>() {
-		     @Override
-			public ObservableValue<ChannelDisplayInfo> call(CellDataFeatures<ChannelDisplayInfo, ChannelDisplayInfo> p) {
-		         return new SimpleObjectProperty<ChannelDisplayInfo>(p.getValue());
-		     }
-		  });
-		col1.setCellFactory(column -> {
-		    return new TableCell<ChannelDisplayInfo, ChannelDisplayInfo>() {
-		    	@Override
-		        protected void updateItem(ChannelDisplayInfo item, boolean empty) {
-		    		super.updateItem(item, empty);
-		            if (item == null || empty) {
-		                setText(null);
-		                setGraphic(null);
-		                return;
-		            }
-		            setText(item.getName());
-					Rectangle square = new Rectangle(0, 0, 10, 10);
-					Integer rgb = item.getColor();
-					if (rgb == null)
-						square.setFill(Color.TRANSPARENT);
-					else
-						square.setFill(ColorToolsFX.getCachedColor(rgb));
-					setGraphic(square);
-		    	}
-		    };
-		   });
-		
+		table.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
+		table.getSelectionModel().selectedItemProperty().addListener(this::handleSelectedChannelChanged);
+
+		TableColumn<ChannelDisplayInfo, ChannelDisplayInfo> col1 = new TableColumn<>("Channel");
+		col1.setId("channel-column");
+		col1.setCellValueFactory(this::channelCellValueFactory);
+		col1.setCellFactory(column -> new ChannelDisplayTableCell()); // Not using shared custom color list!
+																	  // Could change in the future if needed
+
 		col1.setSortable(false);
-		TableColumn<ChannelDisplayInfo, Boolean> col2 = new TableColumn<>("Selected");
-		col2.setCellValueFactory(new Callback<CellDataFeatures<ChannelDisplayInfo, Boolean>, ObservableValue<Boolean>>() {
-		     @Override
-			public ObservableValue<Boolean> call(CellDataFeatures<ChannelDisplayInfo, Boolean> item) {
-		    	 SimpleBooleanProperty property = new SimpleBooleanProperty(imageDisplay.selectedChannels().contains(item.getValue()));
-		    	 // Remove repaint code here - now handled by table selection changes
-		    	 property.addListener((v, o, n) -> {
-	    			 imageDisplay.setChannelSelected(item.getValue(), n);
-	    			 table.refresh();
-		    		 Platform.runLater(() -> viewer.repaintEntireImage());
-		    	 });
-		    	 return property;
-		     }
-		  });
-		col2.setCellFactory(column -> {
-			CheckBoxTableCell<ChannelDisplayInfo, Boolean> cell = new CheckBoxTableCell<>();
-			// Select cells when clicked - means a click anywhere within the row forces selection.
-			// Previously, clicking within the checkbox didn't select the row.
-			cell.addEventFilter(MouseEvent.MOUSE_CLICKED, e -> {
-				if (e.isPopupTrigger())
-					return;
-				int ind = cell.getIndex();
-				var tableView = cell.getTableView();
-				if (ind < tableView.getItems().size()) {
-					if (e.isShiftDown())
-						tableView.getSelectionModel().select(ind);
-					else
-						tableView.getSelectionModel().clearAndSelect(ind);
-					var channel = cell.getTableRow().getItem();
-					// Handle clicks within the cell but outside the checkbox
-					if (e.getTarget() == cell && channel != null && imageDisplay != null) {
-						updateDisplay(channel, !imageDisplay.selectedChannels().contains(channel));
-					}
-					e.consume();
-				}
-			});
-			return cell;
-		});
+		TableColumn<ChannelDisplayInfo, Boolean> col2 = new TableColumn<>("Show");
+		col2.setId("show-column");
+		col2.setCellValueFactory(this::showChannelCellValueFactory);
+		col2.setCellFactory(column -> new ShowChannelDisplayTableCell());
 		col2.setSortable(false);
 		col2.setEditable(true);
 		col2.setResizable(false);
-		
-		
+
+
 		// Handle color change requests when an appropriate row is double-clicked
-		table.setRowFactory(tableView -> {
-			TableRow<ChannelDisplayInfo> row = new TableRow<>();
-			row.setOnMouseClicked(e -> {
-				if (e.getClickCount() == 2) {
-					ChannelDisplayInfo info = row.getItem();
-					var imageData = viewer.getImageData();
-					if (info instanceof DirectServerChannelInfo && imageData != null) {
-						DirectServerChannelInfo multiInfo = (DirectServerChannelInfo)info;
-						int c = multiInfo.getChannel();
-						var channel = imageData.getServer().getMetadata().getChannel(c);
-						
-						Color color = ColorToolsFX.getCachedColor(multiInfo.getColor());
-						picker.setValue(color);
-						
-						
-						Dialog<ButtonType> colorDialog = new Dialog<>();
-						colorDialog.setTitle("Channel properties");
-												
-						colorDialog.getDialogPane().getButtonTypes().setAll(ButtonType.APPLY, ButtonType.CANCEL);
-						
-						var paneColor = new GridPane();
-						int r = 0;
-						var labelName = new Label("Channel name");
-						var tfName = new TextField(channel.getName());
-						labelName.setLabelFor(tfName);
-						PaneTools.addGridRow(paneColor, r++, 0, "Enter a name for the current channel", labelName, tfName);
-						var labelColor = new Label("Channel color");
-						labelColor.setLabelFor(picker);
-						PaneTools.addGridRow(paneColor, r++, 0, "Choose the color for the current channel", labelColor, picker);
-						paneColor.setVgap(5.0);
-						paneColor.setHgap(5.0);
-						
-						colorDialog.getDialogPane().setContent(paneColor);
-						Optional<ButtonType> result = colorDialog.showAndWait();
-						if (result.orElse(ButtonType.CANCEL) == ButtonType.APPLY) {
-//							if (!DisplayHelpers.showMessageDialog("Choose channel color", picker))
-//								return;
-							String name = tfName.getText().trim();
-							if (name.isEmpty()) {
-								Dialogs.showErrorMessage("Set channel name", "The channel name must not be empty!");
-								return;
-							}
-							Color color2 = picker.getValue();
-							if (color == color2 && name.equals(channel.getName()))
-								return;
-							
-							// Update the server metadata
-							int colorUpdated = ColorToolsFX.getRGB(color2);
-							if (imageData != null) {
-								var server = imageData.getServer();
-								var metadata = server.getMetadata();
-								var channels = new ArrayList<>(metadata.getChannels());
-								channels.set(c, ImageChannel.getInstance(name, colorUpdated));
-								var metadata2 = new ImageServerMetadata.Builder(metadata)
-										.channels(channels).build();
-								imageData.updateServerMetadata(metadata2);
-							}
-							
-							// Update the display
-							multiInfo.setLUTColor(
-									(int)(color2.getRed() * 255),
-									(int)(color2.getGreen() * 255),
-									(int)(color2.getBlue() * 255)
-									);
-							
-							// Add color property
-							imageDisplay.saveChannelColorProperties();
-							viewer.repaintEntireImage();
-							updateHistogram();
-							table.refresh();
-						}
-					}
-				}
-			});			
-			return row;
-		});
-		
-		
+		table.setRowFactory(this::createTableRow);
+
 		table.getColumns().add(col1);
 		table.getColumns().add(col2);
 		table.setEditable(true);
 		table.setColumnResizePolicy(TableView.UNCONSTRAINED_RESIZE_POLICY);
 		col1.prefWidthProperty().bind(table.widthProperty().subtract(col2.widthProperty()).subtract(25)); // Hack... space for a scrollbar
-		
-//		col2.setResizable(false);
-//		col2.setMaxWidth(100);
-//		col2.setPrefWidth(50);
-//		col2.setResizable(false);
 
-//		col1.prefWidthProperty().bind(table.widthProperty().multiply(0.7));
-//		col2.prefWidthProperty().bind(table.widthProperty().multiply(0.2));
-		
-//		table.getColumnModel().getColumn(0).setCellRenderer(new ChannelCellRenderer());
-//		table.getColumnModel().getColumn(1).setMaxWidth(table.getColumnModel().getColumn(1).getPreferredWidth());
-		
-		BorderPane paneColor = new BorderPane();
-//		panelColor.setBorder(BorderFactory.createTitledBorder("Color display"));
-		BorderPane paneTableAndFilter = new BorderPane(table);
-		TextField tfFilter = new TextField("");
-		tfFilter.textProperty().bindBidirectional(filterText);
-		tfFilter.setTooltip(new Tooltip("Enter text to find specific channels by name"));
-		tfFilter.setPromptText("Filter channels by name");
-		paneTableAndFilter.setBottom(tfFilter);
-		predicate.addListener((v, o, n) -> updatePredicate());
-		
-		paneColor.setCenter(paneTableAndFilter);
-		
+		return table;
+	}
+
+	private void initializeShowAllCheckbox() {
+		cbShowAll.setTooltip(new Tooltip("Show/hide all channels"));
+		cbShowAll.setContentDisplay(ContentDisplay.GRAPHIC_ONLY);
+		cbShowAll.setIndeterminate(true);
+		// Use action listener because we may change selection status elsewhere
+		// in response to the selected channels being modified elsewhere
+		cbShowAll.setOnAction(e -> syncShowAllToCheckbox());
+	}
+
+	private void syncShowAllToCheckbox() {
+		if (imageDisplay == null || cbShowAll.isIndeterminate())
+			return;
+		if (cbShowAll.isSelected()) {
+			setShowChannels(table.getItems());
+		} else {
+			setHideChannels(table.getItems());
+		}
+	}
+
+	/**
+	 * Install the checkbox for showing all channels
+	 */
+	private void updateShowTableColumnHeader() {
+		var header = table.lookup("#show-column > .label");
+		if (header instanceof Label label) {
+			label.setContentDisplay(ContentDisplay.RIGHT);
+			label.setGraphicTextGap(5);
+			if (cbShowAll.isVisible())
+				label.setGraphic(cbShowAll);
+			// Bind visibility property to whether the checkbox is added to the label or not
+			cbShowAll.visibleProperty().addListener((v, o, n) -> label.setGraphic(n ? cbShowAll : null));
+		}
+	}
+
+
+//	private Pane createCheckboxPane() {
+//		ToggleButton cbShowGrayscale = new ToggleButton("Show grayscale");
+//		cbShowGrayscale.selectedProperty().bindBidirectional(showGrayscale);
+//		cbShowGrayscale.setTooltip(new Tooltip("Show single channel with grayscale lookup table"));
+//		if (imageDisplay != null)
+//			cbShowGrayscale.setSelected(!imageDisplay.useColorLUTs());
+//		showGrayscale.addListener(this::handleDisplaySettingInvalidated);
+//
+//		ToggleButton cbInvertBackground = new ToggleButton("Invert background");
+//		cbInvertBackground.selectedProperty().bindBidirectional(invertBackground);
+//		cbInvertBackground.setTooltip(new Tooltip("Invert the background for display (i.e. switch between white and black).\n"
+//				+ "Use cautiously to avoid becoming confused about how the 'original' image looks (e.g. brightfield or fluorescence)."));
+//		if (imageDisplay != null)
+//			cbInvertBackground.setSelected(imageDisplay.useInvertedBackground());
+//		invertBackground.addListener(this::handleDisplaySettingInvalidated);
+//
+//		return GridPaneUtils.createColumnGridControls(cbShowGrayscale, cbInvertBackground);
+//	}
+
+
+	private Pane createCheckboxPane() {
 		CheckBox cbShowGrayscale = new CheckBox("Show grayscale");
 		cbShowGrayscale.selectedProperty().bindBidirectional(showGrayscale);
 		cbShowGrayscale.setTooltip(new Tooltip("Show single channel with grayscale lookup table"));
 		if (imageDisplay != null)
 			cbShowGrayscale.setSelected(!imageDisplay.useColorLUTs());
-		showGrayscale.addListener(o -> {
-			if (imageDisplay == null)
-				return;
-			Platform.runLater(() -> viewer.repaintEntireImage());
-			table.refresh();
-		});
-		
+		showGrayscale.addListener(this::handleDisplaySettingInvalidated);
+
 		CheckBox cbInvertBackground = new CheckBox("Invert background");
 		cbInvertBackground.selectedProperty().bindBidirectional(invertBackground);
 		cbInvertBackground.setTooltip(new Tooltip("Invert the background for display (i.e. switch between white and black).\n"
 				+ "Use cautiously to avoid becoming confused about how the 'original' image looks (e.g. brightfield or fluorescence)."));
 		if (imageDisplay != null)
 			cbInvertBackground.setSelected(imageDisplay.useInvertedBackground());
-		invertBackground.addListener(o -> {
-			if (imageDisplay == null)
-				return;
-			Platform.runLater(() -> viewer.repaintEntireImage());
-			table.refresh();
-		});
-		
-		CheckBox cbKeepDisplaySettings = new CheckBox("Keep settings");
-		cbKeepDisplaySettings.selectedProperty().bindBidirectional(PathPrefs.keepDisplaySettingsProperty());
-		cbKeepDisplaySettings.setTooltip(new Tooltip("Retain same display settings where possible when opening similar images"));
-		
+		invertBackground.addListener(this::handleDisplaySettingInvalidated);
+
 		FlowPane paneCheck = new FlowPane();
+		paneCheck.setAlignment(Pos.CENTER);
 		paneCheck.setVgap(5);
 		paneCheck.getChildren().add(cbShowGrayscale);
 		paneCheck.getChildren().add(cbInvertBackground);
-		paneCheck.getChildren().add(cbKeepDisplaySettings);
-		paneCheck.setHgap(10);
-		paneCheck.setPadding(new Insets(5, 0, 0, 0));
-		paneColor.setBottom(paneCheck);		
-		pane.setCenter(paneColor);
-		
-		// Create brightness/contrast panel
-		BorderPane panelSliders = new BorderPane();
-		panelSliders.setTop(box);
-		GridPane panelButtons = PaneTools.createColumnGridControls(
-				btnAuto,
-				btnReset
-				);
-		panelSliders.setBottom(panelButtons);
-		panelSliders.setPadding(new Insets(5, 0, 5, 0));
-		
-		BorderPane paneMinMax = new BorderPane();
-		paneMinMax.setPrefHeight(280);
-//		panelMinMax.setBorder(BorderFactory.createTitledBorder("Brightness/Contrast"));
-		paneMinMax.setTop(panelSliders);
-		
-		histogramPanel.setShowTickLabels(false);
-		histogramPanel.getChart().setAnimated(false);
-//		histogramPanel.setBorder(BorderFactory.createEmptyBorder(5, 5, 5, 5));
-//		panelMinMax.setCenter(histogramPanel.getChart());
-		var chartPane = chartWrapper.getPane();
-		paneMinMax.setCenter(chartPane);
-//		chartPane.setPrefSize(200, 200);
-		chartPane.setPrefWidth(200);
-//		histogramPanel.getChart().setPrefSize(200, 200);
-//		histogramPanel.setPreferredSize(new Dimension(200, 120));
-		
-		var labelWarning = new Label("Inverted background - interpret colors cautiously!");
-		labelWarning.setTooltip(new Tooltip("Inverting the background uses processing trickery that reduces the visual information in the image.\n"
-				+ "Be careful about interpreting colors, especially for images with multiple channels"));
-		labelWarning.setStyle("-fx-text-fill: red;");
-		labelWarning.setAlignment(Pos.CENTER);
-		labelWarning.setTextAlignment(TextAlignment.CENTER);
-		labelWarning.visibleProperty().bind(cbInvertBackground.selectedProperty().and(cbShowGrayscale.selectedProperty().not()));
-		labelWarning.setMaxWidth(Double.MAX_VALUE);
-		labelWarning.managedProperty().bind(labelWarning.visibleProperty()); // Remove if not visible
-		
-		var labelWarningGamma = new Label("Gamma is not equal to 1.0 - shift+click to reset");
-		labelWarningGamma.setOnMouseClicked(e -> {
-			if (e.isShiftDown())
-				sliderGamma.setValue(1.0);
-		});
-		labelWarningGamma.setTooltip(new Tooltip("Adjusting the gamma results in a nonlinear contrast adjustment -\n"
-				+ "in science, such changes should usually be disclosed in any figure legends"));
-		labelWarningGamma.setStyle("-fx-text-fill: red;");
-		labelWarningGamma.setAlignment(Pos.CENTER);
-		labelWarningGamma.setTextAlignment(TextAlignment.CENTER);
-		labelWarningGamma.visibleProperty().bind(sliderGamma.valueProperty().isNotEqualTo(1.0, 0.0));
-		labelWarningGamma.setMaxWidth(Double.MAX_VALUE);
-		labelWarningGamma.managedProperty().bind(labelWarningGamma.visibleProperty()); // Remove if not visible
-		
-		var vboxWarnings = new VBox();
-		vboxWarnings.getChildren().setAll(labelWarning, labelWarningGamma);
-				
-		paneMinMax.setBottom(vboxWarnings);
-		
-		pane.setBottom(paneMinMax);
-		pane.setPadding(new Insets(10, 10, 10, 10));
-		
-		Scene scene = new Scene(pane, 350, 580);
-		scene.addEventHandler(KeyEvent.KEY_TYPED, keyListener);
-		dialog.setScene(scene);
-		dialog.setMinWidth(300);
-		dialog.setMinHeight(400);
-		dialog.setMaxWidth(600);
-//		dialog.setMaxHeight(800);
-		
-		updateTable();
-		
-		if (!table.getItems().isEmpty())
-			table.getSelectionModel().select(0);
-		updateDisplay(getCurrentInfo(), true);
-		updateHistogram();
-		updateSliders();
-		
-		// Update sliders when receiving focus - in case the display has been updated elsewhere
-		dialog.focusedProperty().addListener((v, o, n) -> {
-			if (n)
-				updateSliders();
-		});
+		paneCheck.setHgap(15);
+		paneCheck.setMaxHeight(Double.MAX_VALUE);
+		return paneCheck;
+	}
 
-		return dialog;
+
+
+	private ObservableValue<ChannelDisplayInfo> channelCellValueFactory(
+			TableColumn.CellDataFeatures<ChannelDisplayInfo, ChannelDisplayInfo> features) {
+		return new SimpleObjectProperty<>(features.getValue());
+	}
+
+	private ObservableValue<Boolean> showChannelCellValueFactory(
+			TableColumn.CellDataFeatures<ChannelDisplayInfo, Boolean> features) {
+		SimpleBooleanProperty property = new SimpleBooleanProperty(
+				isChannelShowing(features.getValue()));
+		property.addListener((v, o, n) -> {
+			if (n)
+				setShowChannel(features.getValue());
+			else
+				setHideChannel(features.getValue());
+		});
+		return property;
+	}
+
+	private static ObservableValue<String> createGammaLabelBinding(ObservableValue<? extends Number> gammaValue) {
+		return Bindings.createStringBinding(() ->
+						GeneralTools.formatNumber(gammaValue.getValue().doubleValue(), 2),
+				gammaValue);
+	}
+
+	private static ObservableValue<String> createGammaLabelStyleBinding(ObservableValue<? extends Number> gammaValue) {
+		return Bindings.createStringBinding(() -> {
+			if (gammaValue.getValue().doubleValue() == 1.0)
+				return null;
+			return WARNING_STYLE;
+		}, gammaValue);
+	}
+
+	private void handleGammaLabelClicked(MouseEvent event) {
+		if (event.getClickCount() >= 3 || event.isShiftDown()) {
+			// Reset gamma to 1.0
+			sliderGamma.setValue(1.0);
+		} else {
+			var newGamma = Dialogs.showInputDialog("Gamma", "Set gamma value", sliderGamma.getValue());
+			if (newGamma != null)
+				sliderGamma.setValue(newGamma);
+		}
+	}
+
+	private void handleMaxLabelClick(MouseEvent event) {
+		if (event.getClickCount() != 2)
+			return;
+		ChannelDisplayInfo infoVisible = getCurrentInfo();
+		if (infoVisible == null)
+			return;
+
+		Double value = Dialogs.showInputDialog("Display range", "Set display range maximum", (double)infoVisible.getMaxDisplay());
+		if (value != null && !Double.isNaN(value)) {
+			sliderMax.setValue(value);
+			// Update display directly if out of slider range
+			if (value < sliderMax.getMin() || value > sliderMax.getMax()) {
+				imageDisplay.setMinMaxDisplay(infoVisible, (float)infoVisible.getMinDisplay(), (float)value.floatValue());
+				updateSliders();
+				viewer.repaintEntireImage();
+			}
+		}
+	}
+
+
+	private void handleMinLabelClick(MouseEvent event) {
+		if (event.getClickCount() != 2)
+			return;
+		ChannelDisplayInfo infoVisible = getCurrentInfo();
+		if (infoVisible == null)
+			return;
+
+		Double value = Dialogs.showInputDialog("Display range", "Set display range minimum", (double)infoVisible.getMinDisplay());
+		if (value != null && !Double.isNaN(value)) {
+			sliderMin.setValue(value);
+			// Update display directly if out of slider range
+			if (value < sliderMin.getMin() || value > sliderMin.getMax()) {
+				imageDisplay.setMinMaxDisplay(infoVisible, value.floatValue(), infoVisible.getMaxDisplay());
+				updateSliders();
+				viewer.repaintEntireImage();
+			}
+		}
+	}
+
+
+	/**
+	 * Simple invalidation listener to request an image repaint when a display setting changes.
+	 */
+	private void handleDisplaySettingInvalidated(Observable observable) {
+		if (imageDisplay == null)
+			return;
+		Platform.runLater(() -> viewer.repaintEntireImage());
+		table.refresh();
+	}
+
+
+	private void handleGammaWarningClicked(MouseEvent e) {
+		if (e.isShiftDown())
+			sliderGamma.setValue(1.0);
+	}
+
+
+	private ObservableValue<String> createSliderTextBinding(Slider slider) {
+		return Bindings.createStringBinding(() -> {
+			double value = slider.getValue();
+			if (value == (int)value)
+				return String.format("%d", (int) value);
+			else if (value < 1)
+				return String.format("%.3f", value);
+			else if (value < 10)
+				return String.format("%.2f", value);
+			else
+				return String.format("%.1f", value);
+		}, slider.valueProperty());
+	}
+
+
+	private void handleResetButtonClicked(ActionEvent e) {
+		for (ChannelDisplayInfo info : table.getSelectionModel().getSelectedItems()) {
+			imageDisplay.setMinMaxDisplay(info, info.getMinAllowed(), info.getMaxAllowed());
+		}
+		sliderMin.setValue(sliderMin.getMin());
+		sliderMax.setValue(sliderMax.getMax());
+		sliderGamma.setValue(1.0);
+	}
+
+	private void handleAutoButtonClicked(ActionEvent e) {
+		if (imageDisplay == null)
+			return;
+		ChannelDisplayInfo info = getCurrentInfo();
+		double saturation = PathPrefs.autoBrightnessContrastSaturationPercentProperty().get()/100.0;
+		imageDisplay.autoSetDisplayRange(info, saturation);
+		for (ChannelDisplayInfo info2 : table.getSelectionModel().getSelectedItems()) {
+			imageDisplay.autoSetDisplayRange(info2, saturation);
+		}
+		updateSliders();
+		applyMinMaxSliderChanges();
 	}
 	
+	private boolean isInitialized() {
+		return sliderMin != null && sliderMax != null;
+	}
+	
+	private void initializeSliders() {
+		sliderMin = new Slider(0, 255, 0);
+		sliderMax = new Slider(0, 255, 255);
+		sliderMin.valueProperty().addListener(this::handleMinMaxSliderValueChange);
+		sliderMax.valueProperty().addListener(this::handleMinMaxSliderValueChange);
+		sliderGamma = new Slider(0.01, 5, 0.01);
+		sliderGamma.valueProperty().bindBidirectional(PathPrefs.viewerGammaProperty());
+	}
+	
+	private Pane createTextFilterPane() {
+		TextField tfFilter = new TextField("");
+		tfFilter.textProperty().bindBidirectional(filterText);
+		tfFilter.setTooltip(new Tooltip("Enter text to find specific channels by name"));
+		tfFilter.promptTextProperty().bind(Bindings.createStringBinding(() -> {
+			if (useRegex.get())
+				return "Filter channels by regular expression";
+			else
+				return "Filter channels by name";
+		}, useRegex));
+		predicate.addListener((v, o, n) -> updatePredicate());
+
+		ToggleButton btnRegex = new ToggleButton(".*");
+		btnRegex.setTooltip(new Tooltip("Use regular expressions for channel filter"));
+		btnRegex.selectedProperty().bindBidirectional(useRegex);
+
+		GridPane pane = new GridPane();
+		GridPaneUtils.setToExpandGridPaneWidth(tfFilter);
+		pane.add(tfFilter, 0, 0);
+		pane.add(btnRegex, 1, 0);
+		if (BUTTON_SPACING > 0)
+			pane.setHgap(BUTTON_SPACING);
+		return pane;
+	}
+
+
+	private TableRow<ChannelDisplayInfo> createTableRow(TableView<ChannelDisplayInfo> table) {
+		TableRow<ChannelDisplayInfo> row = new TableRow<>();
+		row.setOnMouseClicked(e -> handleTableRowMouseClick(row, e));
+		return row;
+	}
+
+	private void handleTableRowMouseClick(TableRow<ChannelDisplayInfo> row, MouseEvent event) {
+		if (event.getClickCount() != 2)
+			return;
+
+		ChannelDisplayInfo info = row.getItem();
+		var imageData = viewer.getImageData();
+		if (info instanceof DirectServerChannelInfo && imageData != null) {
+			DirectServerChannelInfo multiInfo = (DirectServerChannelInfo)info;
+			int c = multiInfo.getChannel();
+			var channel = imageData.getServer().getMetadata().getChannel(c);
+
+			Color color = ColorToolsFX.getCachedColor(multiInfo.getColor());
+			picker.setValue(color);
+
+
+			Dialog<ButtonType> colorDialog = new Dialog<>();
+			colorDialog.setTitle("Channel properties");
+
+			colorDialog.getDialogPane().getButtonTypes().setAll(ButtonType.APPLY, ButtonType.CANCEL);
+
+			var paneColor = new GridPane();
+			int r = 0;
+			var labelName = new Label("Channel name");
+			var tfName = new TextField(channel.getName());
+			labelName.setLabelFor(tfName);
+			GridPaneUtils.addGridRow(paneColor, r++, 0,
+					"Enter a name for the current channel", labelName, tfName);
+			var labelColor = new Label("Channel color");
+			labelColor.setLabelFor(picker);
+			GridPaneUtils.setFillWidth(Boolean.TRUE, picker, tfName);
+			GridPaneUtils.addGridRow(paneColor, r++, 0,
+					"Choose the color for the current channel", labelColor, picker);
+			paneColor.setVgap(5.0);
+			paneColor.setHgap(5.0);
+
+			colorDialog.getDialogPane().setContent(paneColor);
+			Platform.runLater(() -> tfName.requestFocus());
+			Optional<ButtonType> result = colorDialog.showAndWait();
+			if (result.orElse(ButtonType.CANCEL) == ButtonType.APPLY) {
+				String name = tfName.getText().trim();
+				if (name.isEmpty()) {
+					Dialogs.showErrorMessage("Set channel name", "The channel name must not be empty!");
+					return;
+				}
+				Color color2 = picker.getValue();
+				if (color == color2 && name.equals(channel.getName()))
+					return;
+
+				// Update the server metadata
+				updateChannelColor(multiInfo, name, color2);
+			}
+		}
+	}
+
+	private void updateChannelColor(DirectServerChannelInfo channel,
+										   String newName, Color newColor) {
+		var imageData = viewer.getImageData();
+		if (imageData == null) {
+			logger.warn("Cannot update channel color: no image data");
+			return;
+		}
+		var server = imageData.getServer();
+		if (server.isRGB()) {
+			logger.warn("Cannot update channel color for RGB images");
+			return;
+		}
+		Objects.requireNonNull(channel, "Channel cannot be null");
+		Objects.requireNonNull(newName, "Channel name cannot be null");
+		Objects.requireNonNull(newColor, "Channel color cannot be null");
+
+		int channelIndex = channel.getChannel();
+		var metadata = server.getMetadata();
+		var channels = new ArrayList<>(metadata.getChannels());
+		channels.set(channelIndex, ImageChannel.getInstance(newName, ColorToolsFX.getRGB(newColor)));
+		var metadata2 = new ImageServerMetadata.Builder(metadata)
+				.channels(channels).build();
+		imageData.updateServerMetadata(metadata2);
+
+
+		// Update the display
+		channel.setLUTColor(
+				(int)(newColor.getRed() * 255),
+				(int)(newColor.getGreen() * 255),
+				(int)(newColor.getBlue() * 255)
+		);
+
+		// Add color property
+		imageDisplay.saveChannelColorProperties();
+		viewer.repaintEntireImage();
+		updateHistogram();
+		table.refresh();
+	}
+
+
+	/**
+	 * Respond to changes in the main selected channel in the table
+	 */
+	private void handleSelectedChannelChanged(ObservableValue<? extends ChannelDisplayInfo> observableValue,
+											  ChannelDisplayInfo oldValue, ChannelDisplayInfo newValue) {
+		updateHistogram();
+		updateSliders();
+	}
+
+
+	/**
+	 * Update sliders when receiving focus - in case the display has been updated elsewhere
+	 */
+	private void handleDialogFocusChanged(ObservableValue<? extends Boolean> observable, Boolean oldValue,
+										  Boolean newValue) {
+		if (newValue)
+			updateSliders();
+	}
+
 	
 	private void updateHistogram() {
 		if (table == null || !isInitialized())
 			return;
+
+		boolean areaPlot = true; // Use area plot rather than proper histogram 'bars'
+
 		ChannelDisplayInfo infoSelected = getCurrentInfo();
 		Histogram histogram = (imageDisplay == null || infoSelected == null) ? null : imageDisplay.getHistogram(infoSelected);
 //		histogram = histogramMap.get(infoSelected);
@@ -697,7 +842,7 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 					case Blue:
 						var hist = imageDisplay.getHistogram(c);
 						if (hist != null) {
-							var histogramData = HistogramPanelFX.createHistogramData(hist, true, c.getColor());
+							var histogramData = HistogramPanelFX.createHistogramData(hist, areaPlot, c.getColor());
 							histogramData.setNormalizeCounts(true);
 							data.add(histogramData);
 							if (histogram == null || hist.getMaxCount() > histogram.getMaxCount())
@@ -711,20 +856,18 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 				histogramPanel.getHistogramData().setAll(data);
 			} else
 				histogramPanel.getHistogramData().clear();
-		}
-		else {
+		} else {
 			// Any animation is slightly nicer if we can modify the current data, rather than creating a new one
 			if (histogramPanel.getHistogramData().size() == 1) {
 				Color color = infoSelected.getColor() == null ? ColorToolsFX.TRANSLUCENT_BLACK_FX : ColorToolsFX.getCachedColor(infoSelected.getColor());
 				histogramPanel.getHistogramData().get(0).setHistogram(histogram, color);
 			} else {
-				HistogramData histogramData = HistogramPanelFX.createHistogramData(histogram, true, infoSelected.getColor());
+				HistogramData histogramData = HistogramPanelFX.createHistogramData(histogram, areaPlot, infoSelected.getColor());
 				histogramData.setNormalizeCounts(true);
 				histogramPanel.getHistogramData().setAll(histogramData);
 			}
 		}
-		
-		
+
 		NumberAxis xAxis = (NumberAxis)histogramPanel.getChart().getXAxis();
 		if (infoSelected != null && infoSelected.getMaxAllowed() == 255 && infoSelected.getMinAllowed() == 0) {
 			xAxis.setAutoRanging(false);
@@ -739,61 +882,97 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 		if (infoSelected != null)
 			xAxis.setTickUnit(infoSelected.getMaxAllowed() - infoSelected.getMinAllowed());
 		
-		// Don't use the first of last count if it's an outlier
+		// Don't use the first or last count if it's an outlier & we have many bins
 		NumberAxis yAxis = (NumberAxis)histogramPanel.getChart().getYAxis();
 		if (infoSelected != null && histogram != null) {
-			long maxCount = 0L;
+			long maxCountExcludingEndBins = 0L;
 			for (int i = 1; i < histogram.nBins()-1; i++)
-				maxCount = Math.max(maxCount, histogram.getCountsForBin(i));
-			if (maxCount == 0)
-				maxCount = histogram.getMaxCount();
+				maxCountExcludingEndBins = Math.max(maxCountExcludingEndBins, histogram.getCountsForBin(i));
+			double outlierThreshold = maxCountExcludingEndBins * 4;
+			double yMax = Math.min(histogram.getMaxCount(), outlierThreshold) / histogram.getCountSum();
 			yAxis.setAutoRanging(false);
 			yAxis.setLowerBound(0);
-			yAxis.setUpperBound((double)maxCount / histogram.getCountSum());
+			yAxis.setUpperBound(yMax);
 		}
 		
-		
 		histogramPanel.getChart().getXAxis().setTickLabelsVisible(true);
-		histogramPanel.getChart().getXAxis().setLabel("Pixel value");
+//		histogramPanel.getChart().getXAxis().setLabel("Pixel value");
 		histogramPanel.getChart().getYAxis().setTickLabelsVisible(true);
 //		histogramPanel.getChart().getYAxis().setLabel("Frequency");
 		
 		GridPane pane = new GridPane();
 		pane.setHgap(4);
 		pane.setVgap(2);
-		int r = 0;
+		int row = 0;
 		if (histogram != null) {
-			pane.add(new Label("Min"), 0, r);
-			pane.add(new Label(df.format(histogram.getMinValue())), 1, r);
-			r++;
-			pane.add(new Label("Max"), 0, r);
-			pane.add(new Label(df.format(histogram.getMaxValue())), 1, r);
-			r++;
-			pane.add(new Label("Mean"), 0, r);
-			pane.add(new Label(df.format(histogram.getMeanValue())), 1, r);
-			r++;
-			pane.add(new Label("Std.dev"), 0, r);
-			pane.add(new Label(df.format(histogram.getStdDev())), 1, r);
-			r++;
+			pane.add(new Label("Min"), 0, row);
+			pane.add(new Label(df.format(histogram.getMinValue())), 1, row);
+			row++;
+			pane.add(new Label("Max"), 0, row);
+			pane.add(new Label(df.format(histogram.getMaxValue())), 1, row);
+			row++;
+			pane.add(new Label("Mean"), 0, row);
+			pane.add(new Label(df.format(histogram.getMeanValue())), 1, row);
+			row++;
+			pane.add(new Label("Std.dev"), 0, row);
+			pane.add(new Label(df.format(histogram.getStdDev())), 1, row);
+			row++;
 		}
 		chartTooltip.setGraphic(pane);
 		
-		if (r == 0)
+		if (row == 0)
 			Tooltip.uninstall(histogramPanel.getChart(), chartTooltip);
 		else
 			Tooltip.install(histogramPanel.getChart(), chartTooltip);
 		
 	}
-	
-	
-	void updateDisplay(ChannelDisplayInfo channel, boolean selected) {
-		if (imageDisplay == null)
+
+	private void setShowChannel(ChannelDisplayInfo channel) {
+		if (channel != null)
+			setShowChannels(Collections.singleton(channel));
+	}
+
+	private void setShowChannels(Collection<? extends ChannelDisplayInfo> channels) {
+		if (imageDisplay == null || channels.isEmpty())
 			return;
-		if (channel == null) {
-//			imageDisplay.setChannelSelected(null, selected);
-		} else
-			imageDisplay.setChannelSelected(channel, selected);
-		
+		for (var channel : channels)
+			imageDisplay.setChannelSelected(channel, true);
+		refreshTableAndViewer();
+	}
+
+	private void setHideChannel(ChannelDisplayInfo channel) {
+		if (channel != null)
+			setHideChannels(Collections.singleton(channel));
+	}
+
+	private void setHideChannels(Collection<? extends ChannelDisplayInfo> channels) {
+		if (imageDisplay == null || channels.isEmpty())
+			return;
+		for (var channel : channels)
+			imageDisplay.setChannelSelected(channel, false);
+		refreshTableAndViewer();
+	}
+
+	private void toggleShowHideChannel(ChannelDisplayInfo channel) {
+		if (channel == null)
+			refreshTableAndViewer();
+		else
+			toggleShowHideChannels(Collections.singletonList(channel));
+	}
+
+	private void toggleShowHideChannels(Collection<? extends ChannelDisplayInfo> channels) {
+		if (imageDisplay == null || channels.isEmpty())
+			return;
+		for (var channel : channels)
+			imageDisplay.setChannelSelected(channel, !isChannelShowing(channel));
+		refreshTableAndViewer();
+	}
+
+	private boolean isChannelShowing(ChannelDisplayInfo channel) {
+		return imageDisplay != null && imageDisplay.selectedChannels().contains(channel);
+	}
+
+	private void refreshTableAndViewer() {
 		// If the table isn't null, we are displaying something
 		if (table != null) {
 			updateHistogram();
@@ -801,34 +980,22 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 		}
 		viewer.repaintEntireImage();
 	}
-	
-	
-	void toggleDisplay(ChannelDisplayInfo channel) {
-		if (channel == null)
-			updateDisplay(null, true);
-		else
-			updateDisplay(channel, !imageDisplay.selectedChannels().contains(channel));
-	}
-	
-	
-	ChannelDisplayInfo getCurrentInfo() {
+
+
+	private ChannelDisplayInfo getCurrentInfo() {
 		ChannelDisplayInfo info = table.getSelectionModel().getSelectedItem();
 		// Default to first, if we don't have a selection
 		if (info == null && !table.getItems().isEmpty())
 			info = table.getItems().get(0);
 		return info;
 	}
-	
-		
-	@Override
-	public void run() {
-		if (dialog == null)
-			dialog = createDialog();
-		dialog.show();
+
+
+	private void handleMinMaxSliderValueChange(ObservableValue<? extends Number> observable, Number oldValue, Number newValue) {
+		applyMinMaxSliderChanges();
 	}
 
-	
-	void handleSliderChange() {
+	private void applyMinMaxSliderChanges() {
 		if (slidersUpdating)
 			return;
 		ChannelDisplayInfo infoVisible = getCurrentInfo();
@@ -836,19 +1003,8 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 			return;
 		double minValue = sliderMin.getValue();
 		double maxValue = sliderMax.getValue();
-				
 		imageDisplay.setMinMaxDisplay(infoVisible, (float)minValue, (float)maxValue);
-		
-		// Avoid displaying -0... which looks weird
-		if (Math.abs(Math.round(minValue * 100)) == 0)
-			minValue = 0;
-		if (Math.abs(Math.round(maxValue * 100)) == 0)
-			maxValue = 0;
-		
-//		viewer.updateThumbnail();
 		viewer.repaintEntireImage();
-		
-//		histogramPanel.setVerticalLines(new double[]{infoVisible.getMinDisplay(), infoVisible.getMaxDisplay()}, ColorToolsFX.TRANSLUCENT_BLACK_FX);
 	}
 	
 	
@@ -969,11 +1125,10 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 		}
 		table.refresh();
 		if (viewer != null) {
-//			viewer.updateThumbnail();
 			viewer.repaintEntireImage();
 		}
 	}
-	
+
 	private void updatePredicate() {
 		var items = table.getItems();
 		if (items instanceof FilteredList) {
@@ -995,18 +1150,19 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 		}
 		table.refresh();
 		
-		// If all entries are additive, allow bulk toggling by right-click
+		// If all entries are additive, allow bulk toggling by right-click or with checkbox
 		int n = table.getItems().size();
-		if (n > 0 || n == table.getItems().stream().filter(c -> c.isAdditive()).count()) {
+		if (n > 0 && n == table.getItems().stream().filter(c -> c.isAdditive()).count()) {
 			table.setContextMenu(popup);
+			cbShowAll.setVisible(true);
 		} else {
 			table.setContextMenu(null);
+			cbShowAll.setVisible(false);
 		}
 	}
 
 
-	@Override
-	public void changed(ObservableValue<? extends ImageData<BufferedImage>> source,
+	private void handleImageDataChange(ObservableValue<? extends ImageData<BufferedImage>> source,
 			ImageData<BufferedImage> imageDataOld, ImageData<BufferedImage> imageDataNew) {
 		// TODO: Consider different viewers but same ImageData
 		if (imageDataOld == imageDataNew)
@@ -1028,13 +1184,18 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 			invertBackground.unbindBidirectional(imageDisplay.useInvertedBackgroundProperty());
 			imageDisplay.useInvertedBackgroundProperty().unbindBidirectional(invertBackground);
 		}
-		
+
+		if (imageDisplay != null)
+			imageDisplay.selectedChannels().removeListener(selectedChannelsChangeListener);
+
 		imageDisplay = viewer == null ? null : viewer.getImageDisplay();
-		
+		if (imageDisplay != null)
+			imageDisplay.selectedChannels().addListener(selectedChannelsChangeListener);
+
 		if (imageDataOld != null)
-			imageDataOld.removePropertyChangeListener(this);
+			imageDataOld.removePropertyChangeListener(imageDataPropertyChangeListener);
 		if (imageDataNew != null)
-			imageDataNew.addPropertyChangeListener(this);
+			imageDataNew.addPropertyChangeListener(imageDataPropertyChangeListener);
 		
 		updateTable();
 		
@@ -1043,46 +1204,90 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 		updateHistogram();
 		updateSliders();
 	}
-	
-	
-	
-	@Override
-	public void propertyChange(PropertyChangeEvent evt) {
-		// Don't respond to changes in the ImageDisplay (which we may have triggered...)
-		if (evt.getPropertyName().equals("qupath.lib.display.ImageDisplay"))
-			return;
-		
-		if (!Platform.isFxApplicationThread()) {
-			Platform.runLater(() -> propertyChange(evt));
-			return;
-		}
-		
-		logger.trace("Property change: {}", evt);
-		
-		// Update display if we changed something relevant, including
-		// - server metadata (including channel names/LUTs)
-		// - image type
-		// Note that we don't need to respond to all changes
-		if (evt.getPropertyName().equals("serverMetadata") || 
-				((evt.getSource() instanceof ImageData<?>) && evt.getPropertyName().equals("imageType")))
-			imageDisplay.refreshChannelOptions();
-		
-		updateTable();
-		updateSliders();
-		
-		if (viewer != null) {
-//			viewer.updateThumbnail();
-			viewer.repaintEntireImage();
+
+
+	private ObjectBinding<Predicate<ChannelDisplayInfo>> createChannelDisplayPredicateBinding(StringProperty filterText) {
+		return Bindings.createObjectBinding(() -> {
+			if (useRegex.get())
+				return createChannelDisplayPredicateFromRegex(filterText.get());
+			else
+				return createChannelDisplayPredicateFromText(filterText.get());
+		}, filterText, useRegex);
+	}
+
+	private static Predicate<ChannelDisplayInfo> createChannelDisplayPredicateFromRegex(String regex) {
+		if (regex == null || regex.isBlank())
+			return info -> true;
+		try {
+			Pattern pattern = Pattern.compile(regex);
+			return info -> channelDisplayFromRegex(info, pattern);
+		} catch (PatternSyntaxException e) {
+			logger.warn("Invalid channel display: {} ({})", regex, e.getMessage());
+			return info -> false;
 		}
 	}
-	
-	
-	
-	class BrightnessContrastKeyListener implements EventHandler<KeyEvent> {
+
+	private static boolean channelDisplayFromRegex(ChannelDisplayInfo info, Pattern pattern) {
+		return pattern.matcher(info.getName()).find();
+	}
+
+	private static Predicate<ChannelDisplayInfo> createChannelDisplayPredicateFromText(String filterText) {
+		if (filterText == null || filterText.isBlank())
+			return info -> true;
+		String text = filterText.toLowerCase();
+		return info -> channelDisplayContainsText(info, text);
+	}
+
+	private static boolean channelDisplayContainsText(ChannelDisplayInfo info, String text) {
+		return info.getName().toLowerCase().contains(text);
+	}
+
+
+	/**
+	 * Listener to respond to changes in the ImageData properties (which includes the image type)
+	 */
+	private class ImageDataPropertyChangeListener implements PropertyChangeListener {
+
+		@Override
+		public void propertyChange(PropertyChangeEvent evt) {
+			// Don't respond to changes in the ImageDisplay (which we may have triggered...)
+			if (evt.getPropertyName().equals("qupath.lib.display.ImageDisplay"))
+				return;
+
+			if (!Platform.isFxApplicationThread()) {
+				Platform.runLater(() -> propertyChange(evt));
+				return;
+			}
+
+			logger.trace("Property change: {}", evt);
+
+			// Update display if we changed something relevant, including
+			// - server metadata (including channel names/LUTs)
+			// - image type
+			// Note that we don't need to respond to all changes
+			if (evt.getPropertyName().equals("serverMetadata") ||
+					((evt.getSource() instanceof ImageData<?>) && evt.getPropertyName().equals("imageType")))
+				imageDisplay.refreshChannelOptions();
+
+			updateTable();
+			updateSliders();
+
+			if (viewer != null) {
+				viewer.repaintEntireImage();
+			}
+		}
+
+	}
+
+
+	/**
+	 * Listener to update the display when the user presses a key.
+	 */
+	private class BrightnessContrastKeyTypedListener implements EventHandler<KeyEvent> {
 
 		@Override
 		public void handle(KeyEvent event) {
-			if (imageDisplay == null)
+			if (imageDisplay == null || event.getEventType() != KeyEvent.KEY_TYPED)
 				return;
 			String character = event.getCharacter();
 			if (character != null && character.length() > 0) {
@@ -1090,55 +1295,109 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 				if (c >= 1 && c <= Math.min(9, imageDisplay.availableChannels().size())) {
 					if (table != null) {
 						table.getSelectionModel().clearAndSelect(c-1);
-//						table.scrollTo(c-1);
-//						table.getSelectionModel().select(c-1);
 					}
-					toggleDisplay(imageDisplay.availableChannels().get(c-1));
+					toggleShowHideChannel(imageDisplay.availableChannels().get(c-1));
 					event.consume();
 				}
 			}
 		}
 		
 	}
-	
-	
-	class CopyTableListener implements EventHandler<KeyEvent> {
+
+	/**
+	 * Listener to support key presses for the channel table.
+	 * This is used for two main purposes:
+	 * <ol>
+	 *     <li>Copy/paste channel names</li>
+	 *     <li>Toggle show/hide channels</li>
+	 * </ol>
+	 */
+	private class ChannelTableKeypressedListener implements EventHandler<KeyEvent> {
 		
 		private KeyCombination copyCombo = new KeyCodeCombination(KeyCode.C, KeyCombination.SHORTCUT_DOWN);
 		private KeyCombination pasteCombo = new KeyCodeCombination(KeyCode.V, KeyCombination.SHORTCUT_DOWN);
 
+		// Show/hide/toggle combos use S, H and T
+		private KeyCombination showCombo = new KeyCodeCombination(KeyCode.S, KeyCombination.SHORTCUT_ANY);
+		private KeyCombination hideCombo = new KeyCodeCombination(KeyCode.H, KeyCombination.SHORTCUT_ANY);
+		private KeyCombination toggleCombo = new KeyCodeCombination(KeyCode.T, KeyCombination.SHORTCUT_ANY);
+
+		// Because S and H are awkward to find in the keyboard, show/hide/toggle can also be done with
+		// enter, backspace, and space
 		private KeyCombination spaceCombo = new KeyCodeCombination(KeyCode.SPACE, KeyCombination.SHORTCUT_ANY);
 		private KeyCombination enterCombo = new KeyCodeCombination(KeyCode.ENTER, KeyCombination.SHORTCUT_ANY);
+		private KeyCombination backspaceCombo = new KeyCodeCombination(KeyCode.BACK_SPACE, KeyCombination.SHORTCUT_ANY);
 
 		@Override
 		public void handle(KeyEvent event) {
+			if (event.getEventType() != KeyEvent.KEY_PRESSED)
+				return;
 			if (copyCombo.match(event)) {
 				doCopy(event);
 				event.consume();
 			} else if (pasteCombo.match(event)) {
 				doPaste(event);
 				event.consume();
-			} else if (spaceCombo.match(event) || enterCombo.match(event)) {
-				var channel = table.getSelectionModel().getSelectedItem();
-				if (imageDisplay != null && channel != null) {
-					updateDisplay(channel, !imageDisplay.selectedChannels().contains(channel));
+			} else if (imageDisplay != null) {
+				if (isToggleChannelsEvent(event)) {
+					toggleShowHideChannels(getSelectedChannelsToUpdate());
+					event.consume();
+				} else if (isShowChannelsEvent(event)) {
+					setShowChannels(getSelectedChannelsToUpdate());
+					event.consume();
+				} else if (isHideChannelsEvent(event)) {
+					setHideChannels(getSelectedChannelsToUpdate());
+					event.consume();
 				}
-				event.consume();
 			}
 		}
+
+		private boolean isToggleChannelsEvent(KeyEvent event) {
+			return spaceCombo.match(event) || toggleCombo.match(event);
+		}
+
+		private boolean isShowChannelsEvent(KeyEvent event) {
+			return enterCombo.match(event) || showCombo.match(event);
+		}
+
+		private boolean isHideChannelsEvent(KeyEvent event) {
+			return backspaceCombo.match(event) || hideCombo.match(event);
+		}
+
+		/**
+		 * Get the channels to update, based on the current selection.
+		 * If the main selected channel is not additive, or we're in grayscale mode, return it alone.
+		 * Otherwise, return all selected channels from the table.
+		 * This is to ensure that, if just one channel is changed, then it's the main one - and not just
+		 * the last selected channel in the list.
+		 * @return
+		 */
+		private Collection<ChannelDisplayInfo> getSelectedChannelsToUpdate() {
+			var mainSelectedChannel = table.getSelectionModel().getSelectedItem();
+			if (mainSelectedChannel != null &&
+					(imageDisplay.useGrayscaleLuts()) || !mainSelectedChannel.isAdditive())
+				return Collections.singletonList(mainSelectedChannel);
+			else
+				return table.getSelectionModel().getSelectedItems();
+		}
+
 		
 		/**
 		 * Copy the channel names to the clipboard
 		 * @param event
 		 */
 		void doCopy(KeyEvent event) {
-			var names = table.getSelectionModel().getSelectedItems().stream().map(c -> c.getName()).collect(Collectors.toList());
+			var names = table.getSelectionModel().getSelectedItems().stream().map(c -> c.getName()).toList();
 			var clipboard = Clipboard.getSystemClipboard();
 			var content = new ClipboardContent();
 			content.putString(String.join(System.lineSeparator(), names));
 			clipboard.setContent(content);
 		}
-		
+
+		/**
+		 * Paste channel names from the clipboard, if possible
+		 * @param event
+		 */
 		void doPaste(KeyEvent event) {
 			ImageData<BufferedImage> imageData = viewer.getImageData();
 			if (imageData == null)
@@ -1156,7 +1415,7 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 			if (server.isRGB()) {
 				logger.warn("Cannot set channel names for RGB images");
 			}
-			var names = string.lines().collect(Collectors.toList());
+			var names = string.lines().toList();
 			if (selected.size() != names.size()) {
 				Dialogs.showErrorNotification("Paste channel names", "The number of lines on the clipboard doesn't match the number of channel names to replace!");
 				return;
@@ -1180,7 +1439,7 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 				changes.add(oldChannel.getName() + " -> " + newChannel.getName());
 				channels.set(c, newChannel);
 			}
-			List<String> allNewNames = channels.stream().map(c -> c.getName()).collect(Collectors.toList());
+			List<String> allNewNames = channels.stream().map(c -> c.getName()).toList();
 			Set<String> allNewNamesSet = new LinkedHashSet<>(allNewNames);
 			if (allNewNames.size() != allNewNamesSet.size()) {
 				Dialogs.showErrorMessage("Channel", "Cannot paste channels - names would not be unique \n(check log for details)");
@@ -1198,16 +1457,171 @@ public class BrightnessContrastCommand implements Runnable, ChangeListener<Image
 				dialog.setTitle("Channels");
 				dialog.setHeaderText("Confirm new channel names?");
 				dialog.getDialogPane().setContent(new TextArea(String.join("\n", changes)));
-				if (dialog.showAndWait().orElseGet(() -> ButtonType.CANCEL) == ButtonType.APPLY) {
+				if (dialog.showAndWait().orElse(ButtonType.CANCEL) == ButtonType.APPLY) {
 					var newMetadata = new ImageServerMetadata.Builder(metadata)
 							.channels(channels).build();
 					imageData.updateServerMetadata(newMetadata);
-//					table.refresh();
 				}
 			}
 		}
 		
 	}
-	
+
+
+	/**
+	 * Table cell to display the main information about a channel (name, color).
+	 */
+	private class ChannelDisplayTableCell extends TableCell<ChannelDisplayInfo, ChannelDisplayInfo> {
+
+		private static int MAX_CUSTOM_COLORS = 60;
+
+		private ColorPicker colorPicker;
+		private ObservableList<Color> customColors;
+		private boolean updatingTableCell = false;
+
+		private Comparator<Color> comparator = Comparator.comparingDouble((Color c) -> c.getHue())
+				.thenComparingDouble(c -> c.getSaturation())
+				.thenComparingDouble(c -> c.getBrightness())
+				.thenComparingDouble(c -> c.getOpacity()) // Regular equality uses RGB + opacity
+				.thenComparingDouble(c -> c.getRed())
+				.thenComparingDouble(c -> c.getGreen())
+				.thenComparingDouble(c -> c.getBrightness());
+
+		/**
+		 * Create a new cell, with the optional shared list of custom colors.
+		 * @param customColors if not null, reuse the same list of custom colors and append the current color as needed.
+		 *                     If null, include only the current color as a custom color each time the picker is shown.
+		 */
+		private ChannelDisplayTableCell(ObservableList<Color> customColors) {
+			if (customColors != null)
+				this.customColors = customColors;
+			else
+				this.customColors = null;
+			// Minimal color picker - just a small, clickable colored square
+			colorPicker = new ColorPicker();
+			colorPicker.getStyleClass().addAll("button", "minimal-color-picker", "always-opaque");
+			colorPicker.valueProperty().addListener(this::handleColorChange);
+			setGraphic(colorPicker);
+			setEditable(true);
+		}
+
+		private ChannelDisplayTableCell() {
+			this(null);
+		}
+
+		@Override
+		protected void updateItem(ChannelDisplayInfo item, boolean empty) {
+			super.updateItem(item, empty);
+			if (item == null || empty) {
+				setText(null);
+				setGraphic(null);
+				return;
+			}
+			setText(item.getName());
+			setGraphic(colorPicker);
+			Integer rgb = item.getColor();
+			// Can only set the color for direct, non-RGB channels
+			boolean canChangeColor = rgb != null && item instanceof DirectServerChannelInfo;
+			colorPicker.setDisable(!canChangeColor);
+			colorPicker.setOnShowing(null);
+			if (rgb == null) {
+				colorPicker.setValue(Color.TRANSPARENT);
+			} else {
+				Color color = ColorToolsFX.getCachedColor(rgb);
+				setColorQuietly(color);
+				colorPicker.setOnShowing(e -> {
+					if (customColors == null)
+						colorPicker.getCustomColors().setAll(color);
+					else {
+						// When the picker is being shown, ensure the current color is included in the custom color list
+						if (!customColors.contains(color)) {
+							// Reset the custom color list if it's becoming extremely long
+							if (customColors.size() > MAX_CUSTOM_COLORS)
+								customColors.clear();
+							customColors.add(color);
+							Collections.sort(customColors, comparator);
+						}
+						colorPicker.getCustomColors().setAll(customColors);
+					}
+				});
+			}
+		}
+
+		private void setColorQuietly(Color color) {
+			updatingTableCell = true;
+			colorPicker.setValue(color);
+			updatingTableCell = false;
+		}
+
+		private void handleColorChange(ObservableValue<? extends Color> observable, Color oldValue, Color newValue) {
+			if (updatingTableCell)
+				return;
+			if (newValue == null) {
+				logger.debug("Attempting to set channel color to null!");
+				if (oldValue != null)
+					setColorQuietly(oldValue);
+				return;
+			}
+			var item = this.getItem();
+			if (item instanceof DirectServerChannelInfo)
+				updateChannelColor((DirectServerChannelInfo)item, item.getName(), newValue);
+			else
+				logger.debug("Invalid channel type - cannot set color for {}", item);
+		}
+
+	}
+
+	/**
+	 * Table cell to handle the "show" status for a channel.
+	 */
+	private class ShowChannelDisplayTableCell extends CheckBoxTableCell<ChannelDisplayInfo, Boolean> {
+
+		public ShowChannelDisplayTableCell() {
+			super();
+			addEventFilter(MouseEvent.MOUSE_CLICKED, this::filterMouseClicks);
+		}
+
+		private void filterMouseClicks(MouseEvent event) {
+			// Select cells when clicked - means a click anywhere within the row forces selection.
+			// Previously, clicking within the checkbox didn't select the row.
+			if (event.isPopupTrigger())
+				return;
+			int ind = getIndex();
+			var tableView = getTableView();
+			if (ind < tableView.getItems().size()) {
+				if (event.isShiftDown())
+					tableView.getSelectionModel().select(ind);
+				else
+					tableView.getSelectionModel().clearAndSelect(ind);
+				var channel = getTableRow().getItem();
+				// Handle clicks within the cell but outside the checkbox
+				if (event.getTarget() == this && channel != null && imageDisplay != null) {
+					toggleShowHideChannel(channel);
+				}
+				event.consume();
+			}
+		}
+
+	}
+
+	class SelectedChannelsChangeListener implements ListChangeListener<ChannelDisplayInfo> {
+
+		@Override
+		public void onChanged(Change<? extends ChannelDisplayInfo> c) {
+			if (imageDisplay == null)
+				return;
+			if (imageDisplay.availableChannels().size() == imageDisplay.selectedChannels().size()) {
+				cbShowAll.setIndeterminate(false);
+				cbShowAll.setSelected(true);
+			} else if (imageDisplay.selectedChannels().isEmpty()) {
+				cbShowAll.setIndeterminate(false);
+				cbShowAll.setSelected(false);
+			} else {
+				cbShowAll.setIndeterminate(true);
+			}
+			// Only necessary because it's possible that the channel selection is changed externally
+			table.refresh();
+		}
+	}
 
 }
