@@ -36,8 +36,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
-
 import org.controlsfx.control.action.Action;
 import org.controlsfx.control.action.ActionUtils;
 import org.slf4j.Logger;
@@ -90,7 +88,7 @@ import qupath.lib.common.ColorTools;
 import qupath.lib.common.ThreadTools;
 import qupath.lib.display.ChannelDisplayInfo;
 import qupath.lib.display.ImageDisplay;
-import qupath.lib.gui.ActionTools;
+import qupath.lib.gui.actions.ActionTools;
 import qupath.lib.gui.images.stores.AbstractImageRenderer;
 import qupath.lib.gui.images.stores.ImageRenderer;
 import qupath.lib.gui.prefs.PathPrefs;
@@ -142,12 +140,12 @@ public class MiniViewers {
 			// Listen for changes to all channels or selected channels
 			ObservableList<ChannelDisplayInfo> allChannels = viewer.getImageDisplay().availableChannels();
 			ObservableList<ChannelDisplayInfo> selectedChannels = viewer.getImageDisplay().selectedChannels();
-			ListChangeListener<ChannelDisplayInfo> listChangeListener = new ListChangeListener<ChannelDisplayInfo>() {
-				@Override
-				public void onChanged(Change<? extends ChannelDisplayInfo> c) {
-					updateChannels(viewer, manager, scene);
-				}
-			};
+			ListChangeListener<ChannelDisplayInfo> listChangeListener = new ListChangeListener<>() {
+                @Override
+                public void onChanged(Change<? extends ChannelDisplayInfo> c) {
+                    updateChannels(viewer, manager, scene);
+                }
+            };
 			allChannels.addListener(listChangeListener);
 			selectedChannels.addListener(listChangeListener);
 			
@@ -229,12 +227,12 @@ public class MiniViewers {
 				return display.availableChannels()
 						.stream()
 						.filter(MiniViewers::isColorDeconvolutionChannel)
-						.collect(Collectors.toList());
+						.toList();
 			} else {
 				return display.availableChannels()
 						.stream()
 						.filter(MiniViewers::isRGBChannel)
-						.collect(Collectors.toList());
+						.toList();
 			}			
 		} else {
 			// We want the selected channels, but retaining the original order
@@ -242,7 +240,7 @@ public class MiniViewers {
 			return display.availableChannels()
 					.stream()
 					.filter(c -> selected.contains(c))
-					.collect(Collectors.toList());
+					.toList();
 		}
 	}
 	
@@ -370,23 +368,23 @@ public class MiniViewers {
 		
 		private ExecutorService pool = Executors.newSingleThreadExecutor(ThreadTools.createThreadFactory("mini-viewer", true));
 		
-		private ChangeListener<Number> changeListener = new ChangeListener<Number>() {
+		private ChangeListener<Number> changeListener = new ChangeListener<>() {
 
-			@Override
-			public void changed(ObservableValue<? extends Number> observable, Number oldValue, Number newValue) {
-				pool.submit(() -> requestFullUpdate());
-			}
-			
-		};
+            @Override
+            public void changed(ObservableValue<? extends Number> observable, Number oldValue, Number newValue) {
+                pool.submit(() -> requestFullUpdate());
+            }
+
+        };
 		
-		private ChangeListener<Number> fastChangeListener = new ChangeListener<Number>() {
+		private ChangeListener<Number> fastChangeListener = new ChangeListener<>() {
 
-			@Override
-			public void changed(ObservableValue<? extends Number> observable, Number oldValue, Number newValue) {
-				pool.submit(() -> requestUpdate());
-			}
-			
-		};
+            @Override
+            public void changed(ObservableValue<? extends Number> observable, Number oldValue, Number newValue) {
+                pool.submit(() -> requestUpdate());
+            }
+
+        };
 		
 		private InvalidationListener invalidationListener = new InvalidationListener() {
 
