@@ -41,7 +41,6 @@ import java.util.Locale;
 import java.util.Locale.Category;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import javax.imageio.ImageIO;
@@ -87,6 +86,7 @@ import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyCodeCombination;
 import javafx.scene.input.KeyCombination;
 import javafx.scene.input.KeyEvent;
+import javafx.scene.input.MouseEvent;
 import javafx.scene.layout.Background;
 import javafx.scene.layout.BackgroundFill;
 import javafx.scene.layout.BorderPane;
@@ -101,7 +101,8 @@ import javafx.scene.shape.Rectangle;
 import javafx.scene.text.TextAlignment;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
-import javafx.util.Callback;
+import qupath.fx.utils.FXUtils;
+import qupath.fx.dialogs.FileChoosers;
 import qupath.lib.awt.common.BufferedImageTools;
 import qupath.lib.color.ColorDeconvolutionHelper;
 import qupath.lib.color.ColorDeconvolutionStains;
@@ -111,12 +112,12 @@ import qupath.lib.common.GeneralTools;
 import qupath.lib.display.ChannelDisplayInfo;
 import qupath.lib.display.ImageDisplay;
 import qupath.lib.gui.QuPathGUI;
-import qupath.lib.gui.dialogs.Dialogs;
+import qupath.fx.dialogs.Dialogs;
 import qupath.lib.gui.dialogs.ParameterPanelFX;
 import qupath.lib.gui.prefs.PathPrefs;
 import qupath.lib.gui.prefs.PathPrefs.ImageTypeSetting;
+import qupath.fx.utils.GridPaneUtils;
 import qupath.lib.gui.tools.GuiTools;
-import qupath.lib.gui.tools.PaneTools;
 import qupath.lib.images.ImageData;
 import qupath.lib.images.ImageData.ImageType;
 import qupath.lib.images.servers.ImageServer;
@@ -141,13 +142,13 @@ import qupath.lib.scripting.QP;
  *
  */
 public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>>, PropertyChangeListener {
-	
+
 	private static final Logger logger = LoggerFactory.getLogger(ImageDetailsPane.class);
-	
-	private QuPathGUI qupath;
-	
+
+	private ImageData<BufferedImage> imageData;
+
 	private StackPane pane = new StackPane();
-		
+
 	private TableView<ImageDetailRow> table = new TableView<>();
 	private ListView<String> listAssociatedImages = new ListView<>();
 
@@ -157,27 +158,26 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		METADATA_CHANGED, IMAGE_TYPE,
 		STAIN_1, STAIN_2, STAIN_3, BACKGROUND;
 	};
+
+	private static List<ImageDetailRow> brightfieldRows;
+	private static List<ImageDetailRow> otherRows;
 	
-	private static List<ImageDetailRow> brightfieldRows = Arrays.asList(ImageDetailRow.values());
-	private static List<ImageDetailRow> otherRows = new ArrayList<>(brightfieldRows);
 	static {
+		brightfieldRows = Arrays.asList(ImageDetailRow.values());
+		otherRows = new ArrayList<>(brightfieldRows);
 		otherRows.remove(ImageDetailRow.STAIN_1);
 		otherRows.remove(ImageDetailRow.STAIN_2);
 		otherRows.remove(ImageDetailRow.STAIN_3);
 		otherRows.remove(ImageDetailRow.BACKGROUND);
 	}
 
-	
-	private ImageData<BufferedImage> imageData;
-
 	/**
 	 * Constructor.
-	 * @param qupath QuPath instance
+	 * @param imageDataProperty 
 	 */
-	public ImageDetailsPane(final QuPathGUI qupath) {
-		this.qupath = qupath;
-		qupath.imageDataProperty().addListener(this);
-		
+	public ImageDetailsPane(final ObservableValue<ImageData<BufferedImage>> imageDataProperty) {
+		imageDataProperty.addListener(this);
+
 		// Create the table
 		table.setMinHeight(200);
 		table.setPrefHeight(250);
@@ -191,173 +191,14 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		columnValue.setCellValueFactory(v -> new ReadOnlyObjectWrapper<>(getValue(v.getValue())));
 		columnValue.setEditable(false);
 		columnValue.setPrefWidth(200);
-		columnValue.setCellFactory(new Callback<TableColumn<ImageDetailRow, Object>, TableCell<ImageDetailRow, Object>>() {
-
-			@Override
-			public TableCell<ImageDetailRow, Object> call(TableColumn<ImageDetailRow, Object> param) {
-				TableCell<ImageDetailRow, Object> cell = new TableCell<ImageDetailRow, Object>() {
-					@Override
-					protected void updateItem(Object item, boolean empty) {
-						super.updateItem(item, empty);
-						if (empty) {
-							setText(null);
-							setGraphic(null);
-							return;
-						}
-						//			             ComboBoxTableCell<TableEntry, Object>
-						String style = null;
-						String text = item == null ? "" : item.toString();
-						String tooltipText = text;
-						if (item instanceof double[]) {
-							text = GeneralTools.arrayToString(Locale.getDefault(Category.FORMAT), (double[])item, 2);
-						} else if (item instanceof StainVector) {
-							StainVector stain = (StainVector)item;
-							Integer color = stain.getColor();
-							style = String.format("-fx-text-fill: rgb(%d, %d, %d);", ColorTools.red(color), ColorTools.green(color), ColorTools.blue(color));
-							tooltipText = "Double-click to set stain color (either type values or use a small rectangle ROI in the image)";
-						} else {
-							var type = getTableRow().getItem();
-							if (type != null) {
-								if (type.equals(ImageDetailRow.PIXEL_WIDTH) || type.equals(ImageDetailRow.PIXEL_HEIGHT) || type.equals(ImageDetailRow.Z_SPACING)) {
-									if ("Unknown".equals(item))
-										style = "-fx-text-fill: red;";
-									tooltipText = "Double-click to set pixel calibration (can use a selected line or area ROI in the image)";
-								} else if (type.equals(ImageDetailRow.METADATA_CHANGED))
-									tooltipText = "Double-click to reset original metadata";
-								else if (type.equals(ImageDetailRow.UNCOMPRESSED_SIZE))
-									tooltipText = "Approximate memory required to store all pixels in the image uncompressed";
-							}
-						}
-						setStyle(style);
-						setText(text);
-						setTooltip(new Tooltip(tooltipText));
-					}
-				};
-				
-				cell.setOnMouseClicked(event -> {
-					if (event.getClickCount() < 2)
-						return;
-					TableCell<ImageDetailRow, Object> c = (TableCell<ImageDetailRow, Object>)event.getSource();
-					Object value = c.getItem();
-					if (value instanceof StainVector || value instanceof double[])
-						editStainVector(value);
-					else if (value instanceof ImageType) {
-						promptToSetImageType(imageData, imageData.getImageType());
-					} else {
-						// TODO: Support z-spacing
-						var type = c.getTableRow().getItem();
-						boolean metadataChanged = false;
-						if (type == ImageDetailRow.PIXEL_WIDTH ||
-								type == ImageDetailRow.PIXEL_HEIGHT ||
-								type == ImageDetailRow.Z_SPACING) {
-							metadataChanged = promptToSetPixelSize(imageData, type == ImageDetailRow.Z_SPACING);
-						} else if (type == ImageDetailRow.MAGNIFICATION) {
-							metadataChanged = promptToSetMagnification(imageData);
-						} else if (type == ImageDetailRow.METADATA_CHANGED) {
-							if (!hasOriginalMetadata(imageData.getServer())) {
-								metadataChanged = promptToResetServerMetadata(imageData);
-							}
-						}
-						if (metadataChanged) {
-							c.getTableView().refresh();
-							imageData.getHierarchy().fireHierarchyChangedEvent(this);
-						}
-					}
-				});
-				
-				return cell;
-			}
-		});
+		columnValue.setCellFactory(c -> new ImageDetailTableCell(imageDataProperty));
 		table.getColumns().add(columnName);
 		table.getColumns().add(columnValue);
-		
-		setImageData(qupath.getImageData());
 
-//		listImages.setOnMouseClicked(event -> {
-//			if (event.getClickCount() < 2 || listImages.getSelectionModel().getSelectedItem() == null)
-//				return;
-//			}
-//		);
-		
-		
-		
-		listAssociatedImages.setOnMouseClicked(event -> {
-				if (event.getClickCount() < 2 || listAssociatedImages.getSelectionModel().getSelectedItem() == null)
-					return;
-				String name = listAssociatedImages.getSelectionModel().getSelectedItem();
-				
-				Stage dialog = new Stage();
-				dialog.setTitle(name);
-				dialog.initModality(Modality.NONE);
-				dialog.initOwner(qupath.getStage());
+		setImageData(imageDataProperty.getValue());
 
-				// Create menubar
-				MenuBar menubar = new MenuBar();
-				Menu menuFile = new Menu("File");
-				MenuItem miClose = new MenuItem("Close");
-				miClose.setAccelerator(new KeyCodeCombination(KeyCode.W, KeyCombination.SHORTCUT_DOWN));
-				miClose.setOnAction(e -> dialog.close());
-				MenuItem miSave = new MenuItem("Save as PNG");
-				miSave.setAccelerator(new KeyCodeCombination(KeyCode.S, KeyCombination.SHORTCUT_DOWN));
-				miSave.setOnAction(e -> {
-					BufferedImage img = imageData.getServer().getAssociatedImage(name);
-					File fileOutput = Dialogs.getChooser(dialog).promptToSaveFile("Save image", null, name, "PNG", ".png");
-					if (fileOutput != null) {
-						try {
-							ImageIO.write(img, "PNG", fileOutput);
-						} catch (Exception e1) {
-							Dialogs.showErrorMessage("Save image", "Error saving " + fileOutput.getName() + "\n" + e1.getLocalizedMessage());
-						}
-					}
-				});
-				menuFile.getItems().addAll(miSave, miClose);
-				
-				Menu menuEdit = new Menu("Edit");
-				MenuItem miCopy = new MenuItem("Copy");
-				miCopy.setAccelerator(new KeyCodeCombination(KeyCode.C, KeyCombination.SHORTCUT_DOWN));
-				miCopy.setOnAction(e -> {
-					Image img = SwingFXUtils.toFXImage(imageData.getServer().getAssociatedImage(name), null);
-					ClipboardContent content = new ClipboardContent();
-					content.putImage(img);
-					Clipboard.getSystemClipboard().setContent(content);
-				});
-				
-				
-				menuEdit.getItems().add(miCopy);
-				
-				menubar.getMenus().addAll(menuFile, menuEdit);
-				
-				// Create image view
-				var imgBuffered = imageData.getServer().getAssociatedImage(name);
-				if (!BufferedImageTools.is8bitColorType(imgBuffered.getType()) && imgBuffered.getType() != BufferedImage.TYPE_BYTE_GRAY) {
-					// By wrapping the thumbnail, we avoid slow z-stack/time series requests & determine brightness & contrast just from one plane
-					var wrappedServer = new WrappedBufferedImageServer("Dummy", imgBuffered);
-					var imageDisplay = new ImageDisplay(new ImageData<>(wrappedServer));
-					for (ChannelDisplayInfo info : imageDisplay.selectedChannels()) {
-						imageDisplay.autoSetDisplayRange(info);
-					}
-					imgBuffered = imageDisplay.applyTransforms(imgBuffered, null);
-				}
-				Image img = SwingFXUtils.toFXImage(imgBuffered, null);
-				ImageView imageView = new ImageView(img);
-				BorderPane pane = new BorderPane();
-				imageView.fitWidthProperty().bind(pane.widthProperty());
-				imageView.fitHeightProperty().bind(pane.heightProperty());
-				imageView.setPreserveRatio(true);
-				pane.setCenter(imageView);
-				pane.setTop(menubar);
-				Scene scene = new Scene(pane);
-				pane.prefWidthProperty().bind(scene.widthProperty());
-				pane.prefHeightProperty().bind(scene.heightProperty());
-				menubar.useSystemMenuBarProperty().bindBidirectional(PathPrefs.useSystemMenubarProperty());
-//				menubar.setUseSystemMenuBar(true);
-				pane.setBackground(new Background(new BackgroundFill(Color.BLACK, null, null)));
-				
-				dialog.setScene(scene);
-				dialog.show();
-			}
-		);
-		
+		listAssociatedImages.setOnMouseClicked(this::handleAssociatedImagesMouseClick);
+
 		PathPrefs.maskImageNamesProperty().addListener((v, o, n) -> table.refresh());
 
 		MasterDetailPane mdPane = new MasterDetailPane(Side.BOTTOM);
@@ -367,73 +208,154 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 				Bindings.createBooleanBinding(() -> !listAssociatedImages.getItems().isEmpty(),
 						listAssociatedImages.getItems()));
 		pane.getChildren().add(mdPane);
-//		Accordion accordion = new Accordion(panelTable, panelAssociatedImages);
-//		accordion.setExpandedPane(panelTable);
-//		pane.getChildren().add(accordion);
 	}
 	
 	
-	static boolean hasOriginalMetadata(ImageServer<BufferedImage> server) {
+	
+	private void handleAssociatedImagesMouseClick(MouseEvent event) {
+		if (event.getClickCount() < 2 || listAssociatedImages.getSelectionModel().getSelectedItem() == null)
+			return;
+		String name = listAssociatedImages.getSelectionModel().getSelectedItem();
+
+		Stage dialog = new Stage();
+		dialog.setTitle(name);
+		dialog.initModality(Modality.NONE);
+		var qupath = QuPathGUI.getInstance();
+		if (qupath != null)
+			dialog.initOwner(qupath.getStage());
+
+		// Create menubar
+		MenuBar menubar = new MenuBar();
+		Menu menuFile = new Menu("File");
+		MenuItem miClose = new MenuItem("Close");
+		miClose.setAccelerator(new KeyCodeCombination(KeyCode.W, KeyCombination.SHORTCUT_DOWN));
+		miClose.setOnAction(e -> dialog.close());
+		MenuItem miSave = new MenuItem("Save as PNG");
+		miSave.setAccelerator(new KeyCodeCombination(KeyCode.S, KeyCombination.SHORTCUT_DOWN));
+		miSave.setOnAction(e -> {
+			BufferedImage img = imageData.getServer().getAssociatedImage(name);
+			File fileOutput = FileChoosers.
+					promptToSaveFile(dialog, "Save image",
+							name == null ? null : new File(name),
+							FileChoosers.createExtensionFilter("PNG", ".png"));
+			if (fileOutput != null) {
+				try {
+					ImageIO.write(img, "PNG", fileOutput);
+				} catch (Exception e1) {
+					Dialogs.showErrorMessage("Save image", "Error saving " + fileOutput.getName() + "\n" + e1.getLocalizedMessage());
+				}
+			}
+		});
+		menuFile.getItems().addAll(miSave, miClose);
+
+		Menu menuEdit = new Menu("Edit");
+		MenuItem miCopy = new MenuItem("Copy");
+		miCopy.setAccelerator(new KeyCodeCombination(KeyCode.C, KeyCombination.SHORTCUT_DOWN));
+		miCopy.setOnAction(e -> {
+			Image img = SwingFXUtils.toFXImage(imageData.getServer().getAssociatedImage(name), null);
+			ClipboardContent content = new ClipboardContent();
+			content.putImage(img);
+			Clipboard.getSystemClipboard().setContent(content);
+		});
+
+
+		menuEdit.getItems().add(miCopy);
+
+		menubar.getMenus().addAll(menuFile, menuEdit);
+
+		// Create image view
+		var imgBuffered = imageData.getServer().getAssociatedImage(name);
+		if (!BufferedImageTools.is8bitColorType(imgBuffered.getType()) && imgBuffered.getType() != BufferedImage.TYPE_BYTE_GRAY) {
+			// By wrapping the thumbnail, we avoid slow z-stack/time series requests & determine brightness & contrast just from one plane
+			var wrappedServer = new WrappedBufferedImageServer("Dummy", imgBuffered);
+			var imageDisplay = new ImageDisplay(new ImageData<>(wrappedServer));
+			for (ChannelDisplayInfo info : imageDisplay.selectedChannels()) {
+				imageDisplay.autoSetDisplayRange(info);
+			}
+			imgBuffered = imageDisplay.applyTransforms(imgBuffered, null);
+		}
+		Image img = SwingFXUtils.toFXImage(imgBuffered, null);
+		ImageView imageView = new ImageView(img);
+		BorderPane pane = new BorderPane();
+		imageView.fitWidthProperty().bind(pane.widthProperty());
+		imageView.fitHeightProperty().bind(pane.heightProperty());
+		imageView.setPreserveRatio(true);
+		pane.setCenter(imageView);
+		pane.setTop(menubar);
+		Scene scene = new Scene(pane);
+		pane.prefWidthProperty().bind(scene.widthProperty());
+		pane.prefHeightProperty().bind(scene.heightProperty());
+		menubar.useSystemMenuBarProperty().bindBidirectional(PathPrefs.useSystemMenubarProperty());
+		//				menubar.setUseSystemMenuBar(true);
+		pane.setBackground(new Background(new BackgroundFill(Color.BLACK, null, null)));
+
+		dialog.setScene(scene);
+		dialog.show();
+	}
+	
+
+
+	private static boolean hasOriginalMetadata(ImageServer<BufferedImage> server) {
 		var metadata = server.getMetadata();
 		var originalMetadata = server.getOriginalMetadata();
 		return Objects.equals(metadata, originalMetadata);
 	}
-	
-	
-	static boolean promptToResetServerMetadata(ImageData<BufferedImage> imageData) {
+
+
+	private static boolean promptToResetServerMetadata(ImageData<BufferedImage> imageData) {
 		var server = imageData.getServer();
 		if (hasOriginalMetadata(server)) {
 			logger.info("ImageServer metadata is unchanged!");
 			return false;
 		}
 		var originalMetadata = server.getOriginalMetadata();
-		
+
 		if (Dialogs.showConfirmDialog("Reset metadata", "Reset to original metadata?")) {
 			imageData.updateServerMetadata(originalMetadata);
 			return true;
 		}
 		return false;
 	}
-	
-	
-	static boolean promptToSetMagnification(ImageData<BufferedImage> imageData) {
+
+
+	private static boolean promptToSetMagnification(ImageData<BufferedImage> imageData) {
 		var server = imageData.getServer();
 		Double mag = server.getMetadata().getMagnification();
 		Double mag2 = Dialogs.showInputDialog("Set magnification", "Set magnification for full resolution image", mag);
 		if (mag2 == null || Double.isInfinite(mag) || Objects.equals(mag, mag2))
 			return false;
 		var metadata2 = new ImageServerMetadata.Builder(server.getMetadata())
-			.magnification(mag2)
-			.build();
+				.magnification(mag2)
+				.build();
 		imageData.updateServerMetadata(metadata2);
 		return true;
 	}
-	
-	static boolean promptToSetPixelSize(ImageData<BufferedImage> imageData, boolean requestZSpacing) {
+
+	private static boolean promptToSetPixelSize(ImageData<BufferedImage> imageData, boolean requestZSpacing) {
 		var server = imageData.getServer();
 		var hierarchy = imageData.getHierarchy();
 		var selected = hierarchy.getSelectionModel().getSelectedObject();
 		var roi = selected == null ? null : selected.getROI();
-		
+
 		PixelCalibration cal = server.getPixelCalibration();
 		double pixelWidthMicrons = cal.getPixelWidthMicrons();
 		double pixelHeightMicrons = cal.getPixelHeightMicrons();
 		double zSpacingMicrons = cal.getZSpacingMicrons();
-		
+
 		// Use line or area ROI if possible
 		if (!requestZSpacing && roi != null && !roi.isEmpty() && (roi.isArea() || roi.isLine())) {
 			boolean setPixelHeight = true;
 			boolean setPixelWidth = true;	
 			String message;
 			String units = GeneralTools.micrometerSymbol();
-			
+
 			double pixelWidth = cal.getPixelWidthMicrons();
 			double pixelHeight = cal.getPixelHeightMicrons();
 			if (!Double.isFinite(pixelWidth))
 				pixelWidth = 1;
 			if (!Double.isFinite(pixelHeight))
 				pixelHeight = 1;
-			
+
 			Double defaultValue = null;
 			if (roi.isLine()) {
 				setPixelHeight = roi.getBoundsHeight() != 0;
@@ -445,35 +367,25 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 				units = units + "^2";
 				defaultValue = roi.getScaledArea(pixelWidth, pixelHeight);
 			}
-//			if (setPixelHeight && setPixelWidth) {
-//				defaultValue = server.getAveragedPixelSizeMicrons();
-//			} else if (setPixelHeight) {
-//				defaultValue = server.getPixelHeightMicrons();					
-//			} else if (setPixelWidth) {
-//				defaultValue = server.getPixelWidthMicrons();					
-//			}
+
 			if (Double.isNaN(defaultValue))
 				defaultValue = 1.0;
 			var params = new ParameterList()
 					.addDoubleParameter("inputValue", message, defaultValue, units, "Enter calibrated value in " + units + " for the selected ROI to calculate the pixel size")
 					.addBooleanParameter("squarePixels", "Assume square pixels", true, "Set the pixel width to match the pixel height");
 			params.setHiddenParameters(setPixelHeight && setPixelWidth, "squarePixels");
-			if (!Dialogs.showParameterDialog("Set pixel size", params))
+			if (!GuiTools.showParameterDialog("Set pixel size", params))
 				return false;
 			Double result = params.getDoubleParameterValue("inputValue");
 			setPixelHeight = setPixelHeight || params.getBooleanParameterValue("squarePixels");
 			setPixelWidth = setPixelWidth || params.getBooleanParameterValue("squarePixels");
-			
-//			Double result = Dialogs.showInputDialog("Set pixel size", message, defaultValue);
-//			if (result == null)
-//				return false;
-			
+
 			double sizeMicrons;
 			if (roi.isLine())
 				sizeMicrons = result.doubleValue() / roi.getLength();
 			else
 				sizeMicrons = Math.sqrt(result.doubleValue() / roi.getArea());
-			
+
 			if (setPixelHeight)
 				pixelHeightMicrons = sizeMicrons;
 			if (setPixelWidth)
@@ -485,7 +397,7 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 					.addDoubleParameter("pixelHeight", "Pixel height", pixelHeightMicrons, GeneralTools.micrometerSymbol(), "Entry the pixel height")
 					.addDoubleParameter("zSpacing", "Z-spacing", zSpacingMicrons, GeneralTools.micrometerSymbol(), "Enter the spacing between slices of a z-stack");
 			params.setHiddenParameters(server.nZSlices() == 1, "zSpacing");
-			if (!Dialogs.showParameterDialog("Set pixel size", params))
+			if (!GuiTools.showParameterDialog("Set pixel size", params))
 				return false;
 			if (server.nZSlices() != 1) {
 				zSpacingMicrons = params.getDoubleParameterValue("zSpacing");
@@ -523,65 +435,8 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		} else
 			return false;
 	}
-	
-	
-//	/**
-//	 * Prompt the user to set the {@link ImageType} for the image.
-//	 * @param imageData
-//	 * @return
-//	 */
-//	public static boolean promptToSetImageType(ImageData<BufferedImage> imageData) {
-//		List<ImageType> values = Arrays.asList(ImageType.values());
-//		if (!imageData.getServer().isRGB()) {
-//			values = new ArrayList<>(values);
-//			values.remove(ImageType.BRIGHTFIELD_H_DAB);
-//			values.remove(ImageType.BRIGHTFIELD_H_E);
-//			values.remove(ImageType.BRIGHTFIELD_OTHER);
-//		}
-//		
-//		var dialog = new ChoiceDialog<>(imageData.getImageType(), values);
-//		dialog.setTitle("Image type");
-//		if (QuPathGUI.getInstance() != null)
-//			dialog.initOwner(QuPathGUI.getInstance().getStage());
-//		dialog.getDialogPane().setHeaderText(null);
-//		dialog.getDialogPane().setContentText("Set image type");
-//		dialog.getDialogPane().setPrefWidth(400);
-//		
-//		var labelExplain = new Label("The image type influences some commands (e.g. cell detection) and should be set for every image. "
-//				+ "\n\nSelect an option below or in the preferences to customize how QuPath handles setting the image type when opening an image."
-//				+ "\n\n'Auto-estimate' is convenient to reduce annoying prompts, but the estimates are sometimes wrong. "
-//				+ "When this happens you can correct them by double-clicking "
-//				+ "the type under the 'Image' tab.");
-//		labelExplain.setWrapText(true);
-//		labelExplain.setPrefWidth(400);
-//		labelExplain.setMinHeight(Label.USE_PREF_SIZE);
-//		
-//		var comboSetType = new ComboBox<ImageTypeSetting>();
-//		comboSetType.getItems().setAll(ImageTypeSetting.values());
-//		comboSetType.getSelectionModel().select(PathPrefs.imageTypeSettingProperty().get());
-//		comboSetType.setMaxWidth(Double.MAX_VALUE);
-//		labelExplain.setPadding(new Insets(0, 0, 10, 0));
-//		var expandablePane = new BorderPane(labelExplain);
-//		expandablePane.setBottom(comboSetType);
-//		
-//		dialog.getDialogPane().setExpandableContent(expandablePane);
-//		
-//		var result = dialog.showAndWait();
-//		ImageType type = result.orElse(null);
-//		if (type == null)
-//			return false;
-//		
-//		if (comboSetType.getSelectionModel().getSelectedItem() != null)
-//			PathPrefs.imageTypeSettingProperty().set(comboSetType.getSelectionModel().getSelectedItem());
-//
-//		if (type != imageData.getImageType()) {
-//			imageData.setImageType(type);
-//			return true;
-//		}
-//		return false;
-//	}
-	
-	
+
+
 	/**
 	 * Prompt the user to set the {@link ImageType} for the image.
 	 * @param imageData the image data for which the type should be set
@@ -595,10 +450,10 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		if (defaultType == null)
 			defaultType = ImageType.UNSET;
 		var buttonMap = new LinkedHashMap<ImageType, ToggleButton>();
-		
+
 		// TODO: Create a nicer icon for unspecified type
 		var iconUnspecified = (Group)createImageTypeCell(Color.GRAY, null, null, size);
-		
+
 		if (isRGB) {
 			buttonMap.put(
 					ImageType.BRIGHTFIELD_H_E,
@@ -606,14 +461,14 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 							createImageTypeCell(Color.WHITE, Color.PINK, Color.DARKBLUE, size),
 							"Brightfield image with hematoylin & eosin stains\n(8-bit RGB only)", isRGB)
 					);
-			
+
 			buttonMap.put(
 					ImageType.BRIGHTFIELD_H_DAB,
 					createImageTypeButton(ImageType.BRIGHTFIELD_H_DAB, "Brightfield\nH-DAB",
 							createImageTypeCell(Color.WHITE, Color.rgb(200, 200, 220), Color.rgb(120, 50, 20), size),
 							"Brightfield image with hematoylin & DAB stains\n(8-bit RGB only)", isRGB)
 					);
-			
+
 			buttonMap.put(
 					ImageType.BRIGHTFIELD_OTHER,
 					createImageTypeButton(ImageType.BRIGHTFIELD_OTHER, "Brightfield\nOther",
@@ -621,29 +476,29 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 							"Brightfield image with other chromogenic stains\n(8-bit RGB only)", isRGB)
 					);
 		}
-		
+
 		buttonMap.put(
 				ImageType.FLUORESCENCE,
 				createImageTypeButton(ImageType.FLUORESCENCE, "Fluorescence",
 						createImageTypeCell(Color.BLACK, Color.LIGHTGREEN, Color.BLUE, size),
 						"Fluorescence or fluorescence-like image with a dark background\n" +
-						"Also suitable for imaging mass cytometry", true)
+								"Also suitable for imaging mass cytometry", true)
 				);
-		
+
 		buttonMap.put(
 				ImageType.OTHER,
 				createImageTypeButton(ImageType.OTHER, "Other",
 						createImageTypeCell(Color.BLACK, Color.WHITE, Color.GRAY, size),
 						"Any other image type", true)
 				);
-		
+
 		buttonMap.put(
 				ImageType.UNSET,
 				createImageTypeButton(ImageType.UNSET, "Unspecified",
 						iconUnspecified,
 						"Do not set the image type (not recommended for analysis)", true)
-		);
-		
+				);
+
 		var buttons = buttonMap.values().toArray(ToggleButton[]::new);
 		for (var btn: buttons) {
 			if (btn.isDisabled()) {
@@ -651,16 +506,16 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 			}
 		}
 		var buttonList = Arrays.asList(buttons);
-		
+
 		group.getToggles().setAll(buttons);
 		group.selectedToggleProperty().addListener((v, o, n) -> {
-		    // Ensure that we can't deselect all buttons
+			// Ensure that we can't deselect all buttons
 			if (n == null)
-		        o.setSelected(true);
+				o.setSelected(true);
 		});
 
-		PaneTools.setMaxWidth(Double.MAX_VALUE, buttons);
-		PaneTools.setMaxHeight(Double.MAX_VALUE, buttons);
+		GridPaneUtils.setMaxWidth(Double.MAX_VALUE, buttons);
+		GridPaneUtils.setMaxHeight(Double.MAX_VALUE, buttons);
 		var selectedButton = buttonMap.get(defaultType);
 		group.selectToggle(selectedButton);
 
@@ -671,38 +526,38 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 			var c = new ColumnConstraints();
 			c.setPercentWidth(100.0/nHorizontal);
 			return c;
-		}).collect(Collectors.toList()));
-		
+		}).toList());
+
 		grid.getRowConstraints().setAll(IntStream.range(0, nVertical).mapToObj(i -> {
 			var c = new RowConstraints();
 			c.setPercentHeight(100.0/nVertical);
 			return c;
-		}).collect(Collectors.toList()));
-		
+		}).toList());
+
 		grid.setVgap(5);
-//		grid.setHgap(5);
+		//		grid.setHgap(5);
 		grid.setMaxWidth(Double.MAX_VALUE);
 		for (int i = 0; i < buttons.length; i++) {
 			grid.add(buttons[i], i % nHorizontal, i / nHorizontal);
 		}
-//		grid.getChildren().setAll(buttons);
+		//		grid.getChildren().setAll(buttons);
 
 		var content = new BorderPane(grid);
 		var comboOptions = new ComboBox<ImageTypeSetting>();
 		comboOptions.getItems().setAll(ImageTypeSetting.values());
-		
+
 		var prompts = Map.of(
 				ImageTypeSetting.AUTO_ESTIMATE, "Always auto-estimate type (don't prompt)",
 				ImageTypeSetting.PROMPT, "Always prompt me to set type",
 				ImageTypeSetting.NONE, "Don't set the image type"
 				);
-		comboOptions.setButtonCell(GuiTools.createCustomListCell(p -> prompts.get(p)));
-		comboOptions.setCellFactory(c -> GuiTools.createCustomListCell(p -> prompts.get(p)));
+		comboOptions.setButtonCell(FXUtils.createCustomListCell(p -> prompts.get(p)));
+		comboOptions.setCellFactory(c -> FXUtils.createCustomListCell(p -> prompts.get(p)));
 		comboOptions.setTooltip(
-		        new Tooltip("Choose whether you want to see these prompts " +
-		                "when opening an image for the first time"));
+				new Tooltip("Choose whether you want to see these prompts " +
+						"when opening an image for the first time"));
 		comboOptions.setMaxWidth(Double.MAX_VALUE);
-//		comboOptions.prefWidthProperty().bind(grid.widthProperty().subtract(100));
+		//		comboOptions.prefWidthProperty().bind(grid.widthProperty().subtract(100));
 		comboOptions.getSelectionModel().select(PathPrefs.imageTypeSettingProperty().get());
 
 		if (nVertical > 1)
@@ -714,7 +569,7 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		var labelDetails = new Label("The image type is used for stain separation "
 				+ "by some commands, e.g. 'Cell detection'.\n"
 				+ "Brightfield types are only available for 8-bit RGB images.");
-//				+ "For 'Brightfield' images you can set the color stain vectors.");
+		//				+ "For 'Brightfield' images you can set the color stain vectors.");
 		labelDetails.setWrapText(true);
 		labelDetails.prefWidthProperty().bind(grid.widthProperty().subtract(10));
 		labelDetails.setMaxHeight(Double.MAX_VALUE);
@@ -724,13 +579,13 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		labelDetails.setTextAlignment(TextAlignment.CENTER);
 
 		var dialog = Dialogs.builder()
-		    .title("Set image type")
-		    .headerText("What type of image is this?")
-		    .content(content)
-		    .buttons(ButtonType.APPLY, ButtonType.CANCEL)
-		    .expandableContent(labelDetails)
-		    .build();
-		
+				.title("Set image type")
+				.headerText("What type of image is this?")
+				.content(content)
+				.buttons(ButtonType.APPLY, ButtonType.CANCEL)
+				.expandableContent(labelDetails)
+				.build();
+
 		// Try to make it easier to dismiss the dialog in a variety of ways
 		var btnApply = dialog.getDialogPane().lookupButton(ButtonType.APPLY);
 		Platform.runLater(() -> selectedButton.requestFocus());
@@ -769,7 +624,7 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 				e.consume();
 			}
 		});
-		
+
 		var response = dialog.showAndWait();
 		if (response.orElse(ButtonType.CANCEL) == ButtonType.APPLY) {
 			PathPrefs.imageTypeSettingProperty().set(comboOptions.getSelectionModel().getSelectedItem());
@@ -809,7 +664,7 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 			btn.setDisable(true);
 		return btn;
 	}
-	
+
 	/**
 	 * Create a small icon of a cell, for use with image type buttons.
 	 * @param bgColor
@@ -821,168 +676,30 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 	private static Node createImageTypeCell(Color bgColor, Color cytoColor, Color nucleusColor, double size) {
 		var group = new Group();
 		if (bgColor != null) {
-		    var rect = new Rectangle(0, 0, size, size);
-		    rect.setFill(bgColor);
-		    rect.setEffect(new DropShadow(5.0, Color.BLACK));
-		    group.getChildren().add(rect);
+			var rect = new Rectangle(0, 0, size, size);
+			rect.setFill(bgColor);
+			rect.setEffect(new DropShadow(5.0, Color.BLACK));
+			group.getChildren().add(rect);
 		}
 		if (cytoColor != null) {
-		    var cyto = new Ellipse(size/2.0, size/2.0, size/3.0, size/3.0);
-		    cyto.setFill(cytoColor);
-		    cyto.setEffect(new DropShadow(2.5, Color.BLACK));
-		    group.getChildren().add(cyto);
+			var cyto = new Ellipse(size/2.0, size/2.0, size/3.0, size/3.0);
+			cyto.setFill(cytoColor);
+			cyto.setEffect(new DropShadow(2.5, Color.BLACK));
+			group.getChildren().add(cyto);
 		}
 		if (nucleusColor != null) {
-		    var nucleus = new Ellipse(size/2.4, size/2.4, size/5.0, size/5.0);
-		    nucleus.setFill(nucleusColor);
-		    nucleus.setEffect(new DropShadow(2.5, Color.BLACK));
-		    group.getChildren().add(nucleus);
+			var nucleus = new Ellipse(size/2.4, size/2.4, size/5.0, size/5.0);
+			nucleus.setFill(nucleusColor);
+			nucleus.setEffect(new DropShadow(2.5, Color.BLACK));
+			group.getChildren().add(nucleus);
 		}
-	    group.setOpacity(0.7);
-	    return group;
+		group.setOpacity(0.7);
+		return group;
 	}
-	
-	
-	
-	
-	void editStainVector(Object value) {
-		if (!(value instanceof StainVector || value instanceof double[]))
-			return;
-		//					JOptionPane.showMessageDialog(null, "Modifying stain vectors not yet implemented...");
 
-		ImageData<BufferedImage> imageData = qupath.getImageData();
-		if (imageData == null)
-			return;
-		ColorDeconvolutionStains stains = imageData.getColorDeconvolutionStains();
-		int num = -1; // Default to background values
-		String name = null;
-		String message = null;
-		if (value instanceof StainVector) {
 
-			StainVector stainVector = (StainVector)value;
 
-			if (stainVector.isResidual() && imageData.getImageType() != ImageType.BRIGHTFIELD_OTHER) {
-				logger.warn("Cannot set residual stain vector - this is computed from the known vectors");
-				return;
-			}
-			num = stains.getStainNumber(stainVector);
-			if (num <= 0) {
-				logger.error("Could not identify stain vector " + stainVector + " inside " + stains);
-				return;
-			}
-			name = stainVector.getName();
-			message = "Set stain vector from ROI?";
-		} else
-			message = "Set color deconvolution background values from ROI?";
 
-		ROI pathROI = imageData.getHierarchy().getSelectionModel().getSelectedROI();
-		boolean wasChanged = false;
-		String warningMessage = null;
-		boolean editableName = imageData.getImageType() == ImageType.BRIGHTFIELD_OTHER;
-		if (pathROI != null) {
-			if ((pathROI instanceof RectangleROI) && 
-					!pathROI.isEmpty() &&
-					((RectangleROI) pathROI).getArea() < 500*500) {
-				if (Dialogs.showYesNoDialog("Color deconvolution stains", message)) {
-					ImageServer<BufferedImage> server = imageData.getServer();
-					BufferedImage img = null;
-					try {
-						img = server.readRegion(RegionRequest.createInstance(server.getPath(), 1, pathROI));
-					} catch (IOException e) {
-						Dialogs.showErrorMessage("Set stain vector", "Unable to read image region");
-						logger.error("Unable to read region", e);
-					}
-					int rgb = ColorDeconvolutionHelper.getMedianRGB(img.getRGB(0, 0, img.getWidth(), img.getHeight(), null, 0, img.getWidth()));
-					if (num >= 0) {
-						StainVector vectorValue = ColorDeconvolutionHelper.generateMedianStainVectorFromPixels(name, img.getRGB(0, 0, img.getWidth(), img.getHeight(), null, 0, img.getWidth()), stains.getMaxRed(), stains.getMaxGreen(), stains.getMaxBlue());
-						if (!Double.isFinite(vectorValue.getRed() + vectorValue.getGreen() + vectorValue.getBlue())) {
-							Dialogs.showErrorMessage("Set stain vector",
-									"Cannot set stains for the current ROI!\n"
-									+ "It might be too close to the background color.");
-							return;
-						}
-						value = vectorValue;
-					} else {
-						// Update the background
-						value = new double[] {ColorTools.red(rgb), ColorTools.green(rgb), ColorTools.blue(rgb)};
-					}
-					wasChanged = true;
-				}
-			} else {
-				warningMessage = "Note: To set stain values from an image region, draw a small, rectangular ROI first";
-			}
-		}
-
-		// Prompt to set the name / verify stains
-		ParameterList params = new ParameterList();
-		String title;
-		String nameBefore = null;
-		String valuesBefore = null;
-		String collectiveNameBefore = stains.getName();
-		String suggestedName;
-		if (collectiveNameBefore.endsWith("default"))
-			suggestedName = collectiveNameBefore.substring(0, collectiveNameBefore.lastIndexOf("default")) + "modified";
-		else
-			suggestedName = collectiveNameBefore;
-		params.addStringParameter("collectiveName", "Collective name", suggestedName, "Enter collective name for all 3 stains (e.g. H-DAB Scanner A, H&E Scanner B)");
-		if (value instanceof StainVector) {
-			nameBefore = ((StainVector)value).getName();
-			valuesBefore = ((StainVector)value).arrayAsString(Locale.getDefault(Category.FORMAT));
-			params.addStringParameter("name", "Name", nameBefore, "Enter stain name")
-			.addStringParameter("values", "Values", valuesBefore, "Enter 3 values (red, green, blue) defining color deconvolution stain vector, separated by spaces");
-			title = "Set stain vector";
-		} else {
-			nameBefore = "Background";
-			valuesBefore = GeneralTools.arrayToString(Locale.getDefault(Category.FORMAT), (double[])value, 2);
-			params.addStringParameter("name", "Stain name", nameBefore);
-			params.addStringParameter("values", "Stain values", valuesBefore, "Enter 3 values (red, green, blue) defining background, separated by spaces");
-			params.setHiddenParameters(true, "name");
-			title = "Set background";
-		}
-
-		if (warningMessage != null)
-			params.addEmptyParameter(warningMessage);
-
-		// Disable editing the name if it should be fixed
-		ParameterPanelFX parameterPanel = new ParameterPanelFX(params);
-		parameterPanel.setParameterEnabled("name", editableName);;
-		if (!Dialogs.showConfirmDialog(title, parameterPanel.getPane()))
-			return;
-
-		// Check if anything changed
-		String collectiveName = params.getStringParameterValue("collectiveName");
-		String nameAfter = params.getStringParameterValue("name");
-		String valuesAfter = params.getStringParameterValue("values");
-		if (collectiveName.equals(collectiveNameBefore) && nameAfter.equals(nameBefore) && valuesAfter.equals(valuesBefore) && !wasChanged)
-			return;
-
-		double[] valuesParsed = ColorDeconvolutionStains.parseStainValues(Locale.getDefault(Category.FORMAT), valuesAfter);
-		if (valuesParsed == null) {
-			logger.error("Input for setting color deconvolution information invalid! Cannot parse 3 numbers from {}", valuesAfter);
-			return;
-		}
-
-		if (num >= 0) {
-			try {
-				stains = stains.changeStain(StainVector.createStainVector(nameAfter, valuesParsed[0], valuesParsed[1], valuesParsed[2]), num);					
-			} catch (Exception e) {
-				logger.error("Error setting stain vectors", e);
-				Dialogs.showErrorMessage("Set stain vectors", "Requested stain vectors are not valid!\nAre two stains equal?");
-			}
-		} else {
-			// Update the background
-			stains = stains.changeMaxValues(valuesParsed[0], valuesParsed[1], valuesParsed[2]);
-		}
-		
-		// Set the collective name
-		stains = stains.changeName(collectiveName);
-
-		imageData.setColorDeconvolutionStains(stains);
-		
-		qupath.getViewer().repaintEntireImage();
-	}
-	
-	
 	/**
 	 * Get the {@link Pane} component for addition to a scene.
 	 * @return
@@ -990,21 +707,21 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 	public Pane getPane() {
 		return pane;
 	}
-	
+
 	private void setImageData(ImageData<BufferedImage> imageData) {
 		if (this.imageData != null)
 			this.imageData.removePropertyChangeListener(this);
-		
+
 		this.imageData = imageData;
 		ImageServer<BufferedImage> server = null;
 		if (imageData != null) {
 			imageData.addPropertyChangeListener(this);
 			server = imageData.getServer();
 		}
-		
+
 		table.getItems().setAll(getRows());
 		table.refresh();
-		
+
 		if (listAssociatedImages != null) {
 			if (server == null)
 				listAssociatedImages.getItems().clear();
@@ -1086,7 +803,7 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		}
 	}
 
-	static String decodeURI(URI uri) {
+	private static String decodeURI(URI uri) {
 		try {
 			return URLDecoder.decode(uri.toString(), StandardCharsets.UTF_8);
 		} catch (Exception e) {
@@ -1113,7 +830,7 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 				return "Not available";
 			if (uris.size() == 1)
 				return decodeURI(uris.iterator().next());
-			return "[" + String.join(", ", uris.stream().map(ImageDetailsPane::decodeURI).collect(Collectors.toList())) + "]";
+			return "[" + String.join(", ", uris.stream().map(ImageDetailsPane::decodeURI).toList()) + "]";
 		case IMAGE_TYPE:
 			return imageData.getImageType();
 		case METADATA_CHANGED:
@@ -1187,5 +904,220 @@ public class ImageDetailsPane implements ChangeListener<ImageData<BufferedImage>
 		}
 
 	}
+	
+	
+	private static class ImageDetailTableCell extends TableCell<ImageDetailRow, Object> {
 		
+		private ObservableValue<ImageData<BufferedImage>> imageDataProperty;
+
+		ImageDetailTableCell(ObservableValue<ImageData<BufferedImage>> imageDataProperty) {
+			this.imageDataProperty = imageDataProperty;
+			setOnMouseClicked(this::handleMouseClick);
+		}
+
+
+		@Override
+		protected void updateItem(Object item, boolean empty) {
+			super.updateItem(item, empty);
+			if (empty) {
+				setText(null);
+				setGraphic(null);
+				return;
+			}
+			//			             ComboBoxTableCell<TableEntry, Object>
+			String style = null;
+			String text = item == null ? "" : item.toString();
+			String tooltipText = text;
+			if (item instanceof double[]) {
+				text = GeneralTools.arrayToString(Locale.getDefault(Category.FORMAT), (double[])item, 2);
+				tooltipText = "Double-click to set background values for color deconvolution (either type values or use a small rectangle ROI in the image)";
+			} else if (item instanceof StainVector) {
+				StainVector stain = (StainVector)item;
+				Integer color = stain.getColor();
+				style = String.format("-fx-text-fill: rgb(%d, %d, %d);", ColorTools.red(color), ColorTools.green(color), ColorTools.blue(color));
+				tooltipText = "Double-click to set stain color (either type values or use a small rectangle ROI in the image)";
+			} else {
+				var type = getTableRow().getItem();
+				if (type != null) {
+					if (type.equals(ImageDetailRow.PIXEL_WIDTH) || type.equals(ImageDetailRow.PIXEL_HEIGHT) || type.equals(ImageDetailRow.Z_SPACING)) {
+						if ("Unknown".equals(item))
+							style = "-fx-text-fill: red;";
+						tooltipText = "Double-click to set pixel calibration (can use a selected line or area ROI in the image)";
+					} else if (type.equals(ImageDetailRow.METADATA_CHANGED))
+						tooltipText = "Double-click to reset original metadata";
+					else if (type.equals(ImageDetailRow.UNCOMPRESSED_SIZE))
+						tooltipText = "Approximate memory required to store all pixels in the image uncompressed";
+				}
+			}
+			setStyle(style);
+			setText(text);
+			setTooltip(new Tooltip(tooltipText));
+		}
+
+		private void handleMouseClick(MouseEvent event) {
+			var imageData = imageDataProperty.getValue();
+			if (event.getClickCount() < 2 || imageData == null)
+				return;
+			TableCell<ImageDetailRow, Object> c = (TableCell<ImageDetailRow, Object>)event.getSource();
+			Object value = c.getItem();
+			if (value instanceof StainVector || value instanceof double[])
+				editStainVector(imageData, value);
+			else if (value instanceof ImageType) {
+				promptToSetImageType(imageData, imageData.getImageType());
+			} else {
+				// TODO: Support z-spacing
+				var type = c.getTableRow().getItem();
+				boolean metadataChanged = false;
+				if (type == ImageDetailRow.PIXEL_WIDTH ||
+						type == ImageDetailRow.PIXEL_HEIGHT ||
+						type == ImageDetailRow.Z_SPACING) {
+					metadataChanged = promptToSetPixelSize(imageData, type == ImageDetailRow.Z_SPACING);
+				} else if (type == ImageDetailRow.MAGNIFICATION) {
+					metadataChanged = promptToSetMagnification(imageData);
+				} else if (type == ImageDetailRow.METADATA_CHANGED) {
+					if (!hasOriginalMetadata(imageData.getServer())) {
+						metadataChanged = promptToResetServerMetadata(imageData);
+					}
+				}
+				if (metadataChanged) {
+					c.getTableView().refresh();
+					imageData.getHierarchy().fireHierarchyChangedEvent(this);
+				}
+			}
+		}
+		
+		
+		private static void editStainVector(ImageData<BufferedImage> imageData, Object value) {
+			if (imageData == null || !(value instanceof StainVector || value instanceof double[]))
+				return;
+			
+			ColorDeconvolutionStains stains = imageData.getColorDeconvolutionStains();
+			int num = -1; // Default to background values
+			String name = null;
+			String message = null;
+			if (value instanceof StainVector) {
+
+				StainVector stainVector = (StainVector)value;
+
+				if (stainVector.isResidual() && imageData.getImageType() != ImageType.BRIGHTFIELD_OTHER) {
+					logger.warn("Cannot set residual stain vector - this is computed from the known vectors");
+					return;
+				}
+				num = stains.getStainNumber(stainVector);
+				if (num <= 0) {
+					logger.error("Could not identify stain vector " + stainVector + " inside " + stains);
+					return;
+				}
+				name = stainVector.getName();
+				message = "Set stain vector from ROI?";
+			} else
+				message = "Set color deconvolution background values from ROI?";
+
+			ROI roi = imageData.getHierarchy().getSelectionModel().getSelectedROI();
+			boolean wasChanged = false;
+			String warningMessage = null;
+			boolean editableName = imageData.getImageType() == ImageType.BRIGHTFIELD_OTHER;
+			if (roi != null) {
+				if ((roi instanceof RectangleROI) && 
+						!roi.isEmpty() &&
+						((RectangleROI) roi).getArea() < 500*500) {
+					if (Dialogs.showYesNoDialog("Color deconvolution stains", message)) {
+						ImageServer<BufferedImage> server = imageData.getServer();
+						BufferedImage img = null;
+						try {
+							img = server.readRegion(RegionRequest.createInstance(server.getPath(), 1, roi));
+						} catch (IOException e) {
+							Dialogs.showErrorMessage("Set stain vector", "Unable to read image region");
+							logger.error("Unable to read region", e);
+						}
+						int rgb = ColorDeconvolutionHelper.getMedianRGB(img.getRGB(0, 0, img.getWidth(), img.getHeight(), null, 0, img.getWidth()));
+						if (num >= 0) {
+							StainVector vectorValue = ColorDeconvolutionHelper.generateMedianStainVectorFromPixels(name, img.getRGB(0, 0, img.getWidth(), img.getHeight(), null, 0, img.getWidth()), stains.getMaxRed(), stains.getMaxGreen(), stains.getMaxBlue());
+							if (!Double.isFinite(vectorValue.getRed() + vectorValue.getGreen() + vectorValue.getBlue())) {
+								Dialogs.showErrorMessage("Set stain vector",
+										"Cannot set stains for the current ROI!\n"
+												+ "It might be too close to the background color.");
+								return;
+							}
+							value = vectorValue;
+						} else {
+							// Update the background
+							value = new double[] {ColorTools.red(rgb), ColorTools.green(rgb), ColorTools.blue(rgb)};
+						}
+						wasChanged = true;
+					}
+				} else {
+					warningMessage = "Note: To set stain values from an image region, draw a small, rectangular ROI first";
+				}
+			}
+
+			// Prompt to set the name / verify stains
+			ParameterList params = new ParameterList();
+			String title;
+			String nameBefore = null;
+			String valuesBefore = null;
+			String collectiveNameBefore = stains.getName();
+			String suggestedName;
+			if (collectiveNameBefore.endsWith("default"))
+				suggestedName = collectiveNameBefore.substring(0, collectiveNameBefore.lastIndexOf("default")) + "modified";
+			else
+				suggestedName = collectiveNameBefore;
+			params.addStringParameter("collectiveName", "Collective name", suggestedName, "Enter collective name for all 3 stains (e.g. H-DAB Scanner A, H&E Scanner B)");
+			if (value instanceof StainVector) {
+				nameBefore = ((StainVector)value).getName();
+				valuesBefore = ((StainVector)value).arrayAsString(Locale.getDefault(Category.FORMAT));
+				params.addStringParameter("name", "Name", nameBefore, "Enter stain name")
+				.addStringParameter("values", "Values", valuesBefore, "Enter 3 values (red, green, blue) defining color deconvolution stain vector, separated by spaces");
+				title = "Set stain vector";
+			} else {
+				nameBefore = "Background";
+				valuesBefore = GeneralTools.arrayToString(Locale.getDefault(Category.FORMAT), (double[])value, 2);
+				params.addStringParameter("name", "Stain name", nameBefore);
+				params.addStringParameter("values", "Stain values", valuesBefore, "Enter 3 values (red, green, blue) defining background, separated by spaces");
+				params.setHiddenParameters(true, "name");
+				title = "Set background";
+			}
+
+			if (warningMessage != null)
+				params.addEmptyParameter(warningMessage);
+
+			// Disable editing the name if it should be fixed
+			ParameterPanelFX parameterPanel = new ParameterPanelFX(params);
+			parameterPanel.setParameterEnabled("name", editableName);;
+			if (!Dialogs.showConfirmDialog(title, parameterPanel.getPane()))
+				return;
+
+			// Check if anything changed
+			String collectiveName = params.getStringParameterValue("collectiveName");
+			String nameAfter = params.getStringParameterValue("name");
+			String valuesAfter = params.getStringParameterValue("values");
+			if (collectiveName.equals(collectiveNameBefore) && nameAfter.equals(nameBefore) && valuesAfter.equals(valuesBefore) && !wasChanged)
+				return;
+
+			double[] valuesParsed = ColorDeconvolutionStains.parseStainValues(Locale.getDefault(Category.FORMAT), valuesAfter);
+			if (valuesParsed == null) {
+				logger.error("Input for setting color deconvolution information invalid! Cannot parse 3 numbers from {}", valuesAfter);
+				return;
+			}
+
+			if (num >= 0) {
+				try {
+					stains = stains.changeStain(StainVector.createStainVector(nameAfter, valuesParsed[0], valuesParsed[1], valuesParsed[2]), num);					
+				} catch (Exception e) {
+					logger.error("Error setting stain vectors", e);
+					Dialogs.showErrorMessage("Set stain vectors", "Requested stain vectors are not valid!\nAre two stains equal?");
+				}
+			} else {
+				// Update the background
+				stains = stains.changeMaxValues(valuesParsed[0], valuesParsed[1], valuesParsed[2]);
+			}
+
+			// Set the collective name
+			stains = stains.changeName(collectiveName);
+			imageData.setColorDeconvolutionStains(stains);
+		}
+
+	};
+	
+
 }
